[02. Javascript] 변수 내용 추가

--- a/02. JavaScript.md
+++ b/02. JavaScript.md
@@ -2,7 +2,7 @@
 
 ## 프로그래밍
 
-#### 01. 프로그래밍이란 뭐라고 생각하나요?
+### 01. 프로그래밍이란 뭐라고 생각하나요?
 
 프로그래밍이란 0과 1밖에 알지 못하는 기계가 실행할 수 있을 정도로 정확하고 상세하게 요구사항을 설명하는 작업이며, 그 결과물이 바로 코드다.
 
@@ -23,3 +23,7 @@
 ## 변수
 
 #### 01. 변수란 무엇인가요?
+
+변수는 하나의 값을 저장하기 위해 확보한 메모리 공간 자체 또는 그 메모리 공간을 식별하기 위해 붙인 이름을 말한다.
+
+간단히 말하자면 변수는 프로그래밍 언어에서 값을 저장하고 참조하는 메커니즘으로 값의 위치를 가리키는 상징적인 이름이다.
