[03.HTML] DOCTYPE 내용 추가

--- a/03. HTML.md
+++ b/03. HTML.md
@@ -1,1 +1,106 @@
-3.  HTML
+# 3. HTML
+
+## DOCTYPE
+
+#### 01. DOCTYPE에 대하여 설명하시오.
+
+<!DOCTYPE>는 HTML 문서의 첫 번째 줄에 있는 선언으로, 브라우저에게 문서의 HTML 버전을 알려줍니다. 이를 통해 브라우저가 문서를 올바르게 렌더링하도록 도와줍니다.
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Hello World!</title>
+  </head>
+  <body></body>
+</html>
+```
+
+#### 02. meta 태그에 대해서 알고 있나요??📌
+
+meta 태그는 해당 문서에 대한 정보인 메타데이터(metadata)를 정의할 때 사용합니다.
+
+meta 요소는 base, link, script, style, title 요소와 같은 다른 메타데이터 관련 요소들이 나타낼 수 없는 다양한 종류의 메타데이터를 제공할 때 사용되며, 이렇게 제공된 정보는 브라우저나 검색 엔진, 다른 웹 서비스에서 사용하게 됩니다.
+
+이러한 meta 요소는 언제나 head 요소 내부에 위치해야 합니다.
+
+만약 name 속성이나 http-equiv 속성이 명시되었다면 반드시 content 속성도 함께 명시되어야 하며, 반대로 두 속성이 명시되지 않았다면 content 속성 또한 명시될 수 없습니다.
+
+HTML5에서는 <meta> 요소를 통해 웹 페이지에서 사용자가 볼 수 있는 영역인 뷰포트(viewport)를 제어할 수 있도록 name 속성에 viewport 속성값을 제공하고 있습니다.
+
+#### 03. meta 태그의 요소에 대해서 아는대로 말해보세요📌
+
+```html
+<head>
+  <meta charset="UTF-8" />
+  <!-- 검색 엔진을 위한 키워드(keyword)를 정의하는 예제 -->
+  <meta name="keyword" content="HTML, meta, tag, element, reference" />
+  <!-- 웹 페이지에 대한 설명(description)을 정의하는 예제 -->
+  <meta name="description" content="HTML meta tag page" />
+  <!-- 문서의 저자(author)를 정의하는 예제 -->
+  <meta name="author" content="TCPSchool" />
+  <!-- 5초 뒤에 다른 페이지로 리다이렉트(redirect)시키는 예제 -->
+  <meta http-equiv="refresh" content="5;url=http://www.tcpschool.com" />
+  <!-- 모든 장치에서 웹 사이트가 잘 보이도록 뷰포트(viewport)를 설정하는 예제 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HTML meta tag</title>
+</head>
+```
+
+php로 작성된 메타태그 예시
+
+```php
+$meta_title = htmlentities($newstitle, ENT_QUOTES, 'UTF-8');
+$str_head = '';
+$str_head .= "<meta name=\"title\" content=\"".title_js($meta_title)." | 영남일보 | ".$gija_name." 기자 | ".$lcdnm."\"/>\n";
+$str_head .= "<meta http-equiv=\"Content-Language\" content=\"ko\">\n";
+$str_head .= "<meta name=\"description\" content=\"".$desc."\"/>\n";
+$str_head .= "<meta name=\"author\" content=\"".$gija_name." 기자\"/>\n";
+$str_head .= "<meta name=\"publisher\" content=\"".MASTER_USERNAME."\"/>\n";
+$str_head .= "<meta name=\"Copyright\" content=\"".MASTER_USERNAME."\"/>\n";
+$str_head .= "<meta name=\"Distribution\" content=\"".MASTER_USERNAME."\"/>\n";
+$str_head .= "<meta name=\"other agent\" content=\"영남일보 인터넷뉴스부\"/>\n";
+$str_head .= "<meta name=\"Classification\" content=\"".$classification."\"/>\n";
+$str_head .= "<meta name=\"Author-Date(Date)\" content=\"".$authorDate[1]."\"/>\n";
+$str_head .= "<meta name=\"Location\" content=\"대한민국\"/>\n";
+$str_head .= "<meta name=\"keywords\" content=\"영남일보, 종합일간지, 대구 뉴스, 경북 뉴스, 신문, 뉴스, yeongnam, News\" />\n";
+$str_head .= "<meta name=\"news_keywords\" content=\"".$keyword."\" />\n";
+if(strlen($img_name)> 31){
+    $str_head .= "<meta name=\"image\" content=\"".$img_name."\" />\n";
+    $str_head .= "<meta property=\"og:image\" content=\"".$img_name."\" />\n";
+    $str_head .= "<meta name=\"og:image\" content=\"".$img_name."\" />\n";
+}else{
+    $str_head .= "<meta name=\"image\" content=\"https:".MAINPATH."images/yeongnam_logo.png\" />\n";
+    $str_head .= "<meta property=\"og:image\" content=\"https:".MAINPATH."images/yeongnam_logo.png\" />\n";
+    $str_head .= "<meta name=\"og:image\" content=\"https:".MAINPATH."images/yeongnam_logo.png\" />\n";
+}
+$str_head .= "<meta property=\"og:locale\" content=\"ko_KR\"/>\n";
+$str_head .= "<meta property=\"og:site_name\" content=\"".MASTER_USERNAME."\"/>\n";
+$str_head .= "<meta property=\"og:type\" content=\"article\" />\n";
+$str_head .= "<meta property=\"og:article:author\" content=\"".$gija_name." 기자\"/>\n";
+$str_head .= "<meta property=\"og:title\" content=\"".htmlentities($newstitle, ENT_QUOTES, 'UTF-8')." | 영남일보 | ".$gija_name." 기자 | ".$lcdnm."\"/>\n";
+$str_head .= "<meta property=\"og:description\" content=\"".$desc."\" />\n";
+$str_head .= "<meta property=\"og:site\" content=\"https:".MAINPATH."view.php?key=".$key."\" />\n";
+$str_head .= "<meta property=\"og:url\" content=\"https:".MAINPATH."view.php?key=".$key."\" />\n";
+$str_head .= "<meta name=\"twitter:site\" content=\"@".MASTER_E_NAME."\"/>\n";
+$str_head .= "<meta name=\"twitter:creator\" content=\"@".MASTER_E_NAME."\"/>\n";
+$str_head .= "<meta name=\"twitter:card\" content=\"summary_large_image\" />\n";
+$str_head .= "<meta name=\"twitter:title\" content=\"".htmlentities($newstitle, ENT_QUOTES, 'UTF-8')." | 영남일보 | ".$gija_name." 기자 | ".$lcdnm."\"/>\n";
+$str_head .= "<meta name=\"twitter:description\" content=\"".$desc."\" />\n";
+if(strlen($img_name)> 31){
+    $str_head .= "<meta name=\"twitter:image\" content=\"".$img_name."\" />\n";
+}else{
+    $str_head .= "<meta name=\"twitter:image\" content=\"https:".MAINPATH."images/yn_logo.png\" />\n";
+}
+$str_head .= "<meta name=\"twitter:domain\" content=\"".MASTER_USERNAME."\" />\n";
+$str_head .= "<meta property=\"title\" content=\"".title_js($newstitle)." | 영남일보 | ".$gija_name." 기자 | ".$lcdnm."\"/>\n";
+$str_head .= "<meta property=\"dable:item_id\" content=\"".$key."\" />\n";
+$str_head .= "<meta property=\"article:section\" content=\"".$lcdnm."\" />\n";
+$str_head .= "<meta property=\"article:section2\" content=\"".$mcdnm."\" />\n";
+$str_head .= "<meta property=\"article:published_time\" content=\"".date("c",strtotime($confirmdate))."\" />\n";
+$str_head .= "<meta property=\"url\" content=\"https:".MAINPATH."view.php?key=".$key."\" />\n";
+$str_head .= "<meta itemprop=\"publisher\" content=\"".$gija_name." 기자\" />\n";
+$str_head .= "<link rel=\"canonical\" href=\"https:".MAINPATH."view.php?key=".$key."\" />\n";
+$str_head .= "<link rel=\"alternative\" media=\"only screen and (max-width: 640px)\" href=\"https:".MOBILEPATH."view.php?key=".$key."\" />\n";
+```
