[01.CS] HTTP 내용 추가

--- a/01. Computer Science.md
+++ b/01. Computer Science.md
@@ -4,8 +4,6 @@
 
 #### 1. 네트워크에서 패킷이란 무엇을 의미하나요?
 
-&emsp;
-
 #### 네트워크에서 처리량은 무엇을 의미하나요?
 
 #### 지연시간이란 무엇인가요?
@@ -29,3 +27,47 @@
 #### MAC 주소란 무엇인가요?
 
 #### NAT란 무엇인가요?
+
+## HTTP
+
+#### 01. HTTP란 뭔가요?
+
+HTTP (HyperText Transfer Protocol)
+
+텍스트 기반의 통신 규약으로 인터넷에서 데이터를 주고받을 수 있는 프로토콜이다. 이렇게 규약을 정해두었기 때문에 모든 프로그램이 이 규약에 맞춰 개발해서 서로 정보를 교환할 수 있게 되었다
+
+클라이언트 즉, 사용자가 브라우저를 통해서 어떠한 서비스를 url을 통하거나 다른 것을 통해서 요청(request)을 하면 서버에서는 해당 요청사항에 맞는 결과를 찾아서 사용자에게 응답(response)하는 형태로 동작한다.
+
+- 요청 : client -> server
+- 응답 : server -> client
+
+HTML 문서만이 HTTP 통신을 위한 유일한 정보 문서는 아니다.
+Plain text로 부터 JSON 데이터 및 XML과 같은 형태의 정보도 주고 받을 수 있으며, 보통은 클라이언트가 어떤 정보를 HTML 형태로 받고 싶은지, JSON 형태로 받고 싶은지 명시해주는 경우가 많다.
+
+#### 02. HTTP프로토콜의 가장 큰 특징이 뭔가요??
+
+- HTTP 메시지는 HTTP 서버와 HTTP 클라이언트에 의해 해석이 된다.
+- TCP/ IP를 이용하는 응용 프로토콜이다.
+  (컴퓨터와 컴퓨터간에 데이터를 전송 할 수 있도록 하는 장치로 인터넷이라는 거대한 통신망을 통해 원하는 정보(데이터)를 주고 받는 기능을 이용하는 응용 프로토콜)
+- HTTP는 연결 상태를 유지하지 않는 비연결성 프로토콜이다.
+  (이러한 단점을 해결하기 위해 Cookie와 Session이 등장하였다.)
+- HTTP는 연결을 유지하지 않는 프로토콜이기 때문에 요청/응답 방식으로 동작한다.
+
+#### 03. URL은 뭔가요??
+
+<img src="img/URL.png" alt="URL 이미지" width="600px">
+
+- URL의 첫 번째 부분은 브라우저가 리소스를 요청하는 데 사용해야 하는 프로토콜을 나타냅니다.(프로토콜은 컴퓨터 네트워크에서 데이터를 교환하거나 전송하기 위한 설정 방법입니다). 일반적으로 웹사이트의 경우 프로토콜은 HTTPS 또는 HTTP(보안되지 않은 버전)입니다.
+
+그 다음에는 권한(authority)이 뒤따르며 문자 패턴 ://에 의해 스키마와 구분됩니다. 만약 존재한다면 권한에는 콜론으로 구분된 도메인(예: www.example.com)과 포트(80)가 모두 포함됩니다.
+
+- 도메인은 요청하는 웹 서버를 나타냅니다. 도메인은 일반적으로 도메인 이름이지만 IP 주소도 사용될 수 있습니다. (그러나 이것은 훨씬 불편하기 때문에 자주 사용하지 않습니다.)
+  포트는 웹 서버의 리소스에 접근하는 데 사용되는 기술적인 "게이트"를 나타냅니다. 웹 서버가 리소스에 대한 액세스 권한을 부여하기 위해 HTTP 프로토콜의 표준 포트(HTTP의 경우 80, HTTPS의 경우 443)를 사용하는 경우엔 일반적으로 생략합니다. 그렇지 않으면 필수입니다.
+
+- /path/to/myfile.html은 웹 서버에 있는 리소스의 경로입니다. 웹 초기에는 이와 같은 경로가 웹 서버의 실제 파일 위치를 나타냈습니다. 요즘에는 대부분 물리적 실체가 없는 웹 서버가 추상적으로 처리합니다.
+
+- ?key1=value1&key2=value2는 웹 서버에 제공되는 추가 매개변수입니다. 이러한 매개변수는 & 기호로 구분된 키/값 쌍 목록입니다. 웹 서버는 리소스를 반환하기 전에 이러한 매개변수를 사용하여 추가 작업을 수행할 수 있습니다. 각 웹 서버에는 매개변수에 관한 고유한 규칙이 있으며 특정 웹 서버가 매개변수를 처리하는지 알 수 있는 신뢰할 수 있는 유일한 방법은 웹 서버 소유자에게 물어보는 것입니다.
+
+- #SomewhereInTheDocument는 리소스 자체의 어떤 부분에 대한 앵커입니다. 앵커는 리소스 내부에서 일종의 "책갈피" 역할을 하며, 브라우저에 해당 "책갈피" 지점의 콘텐츠를 표시하도록 지시합니다. 예를 들어 HTML 문서에서는 브라우저가 앵커가 정의된 지점으로 스크롤합니다. 비디오 또는 오디오 문서에서 브라우저는 앵커가 나타내는 시간으로 이동하려고 시도합니다. 프래그먼트 식별자라고도 하는 # 뒤의 부분은 요청과 함께 서버로 전송되지 않는다는 점은 주목할 가치가 있습니다.
+
+#### 04. HTTP/1.0과 HTTP/1.1의 차이는 뭔가요??
