--- a/01. Computer Science.md
+++ b/01. Computer Science.md
@@ -2,35 +2,35 @@
 
 ## 네트워크
 
-#### 1. 네트워크에서 패킷이란 무엇을 의미하나요?
+### 네트워크에서 패킷이란 무엇을 의미하나요?
 
-#### 네트워크에서 처리량은 무엇을 의미하나요?
+### 네트워크에서 처리량은 무엇을 의미하나요?
 
-#### 지연시간이란 무엇인가요?
+### 지연시간이란 무엇인가요?
 
-#### 처리량은 어떤 상황에 영향을 받나요?
+### 처리량은 어떤 상황에 영향을 받나요?
 
-#### 네트워크 병목현상은 무엇인가요?
+### 네트워크 병목현상은 무엇인가요?
 
-#### TCP/IP 가 무엇인가요? 각 계층에 대해서 설명할 수 있나요?
+### TCP/IP 가 무엇인가요? 각 계층에 대해서 설명할 수 있나요?
 
-#### 전송 계층의 대표적인 방식은 무엇이 있고 어떤 차이가 있나요? (키워드: TCP, UDP)
+### 전송 계층의 대표적인 방식은 무엇이 있고 어떤 차이가 있나요? (키워드: TCP, UDP)
 
-#### 계층 간 데이터 송수신 과정에 대해 설명할 수 있나요? (키워드:캡슐화, 비캡슐화)
+### 계층 간 데이터 송수신 과정에 대해 설명할 수 있나요? (키워드:캡슐화, 비캡슐화)
 
-#### 네트워크에서 PDU에 대해 알고 있나요?
+### 네트워크에서 PDU에 대해 알고 있나요?
 
-#### 로드밸런서란 무엇인가요?
+### 로드밸런서란 무엇인가요?
 
-#### ARP란 무엇인가요?
+### ARP란 무엇인가요?
 
-#### MAC 주소란 무엇인가요?
+### MAC 주소란 무엇인가요?
 
-#### NAT란 무엇인가요?
+### NAT란 무엇인가요?
 
 ## HTTP
 
-#### 01. HTTP란 뭔가요?
+### HTTP란 뭔가요?
 
 HTTP (HyperText Transfer Protocol)
 
@@ -44,7 +44,7 @@ HTTP (HyperText Transfer Protocol)
 HTML 문서만이 HTTP 통신을 위한 유일한 정보 문서는 아니다.
 Plain text로 부터 JSON 데이터 및 XML과 같은 형태의 정보도 주고 받을 수 있으며, 보통은 클라이언트가 어떤 정보를 HTML 형태로 받고 싶은지, JSON 형태로 받고 싶은지 명시해주는 경우가 많다.
 
-#### 02. HTTP프로토콜의 가장 큰 특징이 뭔가요??
+### HTTP프로토콜의 가장 큰 특징이 뭔가요??
 
 - HTTP 메시지는 HTTP 서버와 HTTP 클라이언트에 의해 해석이 된다.
 - TCP/ IP를 이용하는 응용 프로토콜이다.
@@ -53,7 +53,7 @@ Plain text로 부터 JSON 데이터 및 XML과 같은 형태의 정보도 주고
   (이러한 단점을 해결하기 위해 Cookie와 Session이 등장하였다.)
 - HTTP는 연결을 유지하지 않는 프로토콜이기 때문에 요청/응답 방식으로 동작한다.
 
-#### 03. URL은 뭔가요??
+### URL은 뭔가요??
 
 <img src="img/URL.png" alt="URL 이미지" width="600px">
 
@@ -70,4 +70,4 @@ Plain text로 부터 JSON 데이터 및 XML과 같은 형태의 정보도 주고
 
 - #SomewhereInTheDocument는 리소스 자체의 어떤 부분에 대한 앵커입니다. 앵커는 리소스 내부에서 일종의 "책갈피" 역할을 하며, 브라우저에 해당 "책갈피" 지점의 콘텐츠를 표시하도록 지시합니다. 예를 들어 HTML 문서에서는 브라우저가 앵커가 정의된 지점으로 스크롤합니다. 비디오 또는 오디오 문서에서 브라우저는 앵커가 나타내는 시간으로 이동하려고 시도합니다. 프래그먼트 식별자라고도 하는 # 뒤의 부분은 요청과 함께 서버로 전송되지 않는다는 점은 주목할 가치가 있습니다.
 
-#### 04. HTTP/1.0과 HTTP/1.1의 차이는 뭔가요??
+### HTTP/1.0과 HTTP/1.1의 차이는 뭔가요??
