--- a/02. JavaScript.md
+++ b/02. JavaScript.md
@@ -2,11 +2,11 @@
 
 ## 프로그래밍
 
-### 01. 프로그래밍이란 뭐라고 생각하나요?
+### 프로그래밍이란 뭐라고 생각하나요?
 
 프로그래밍이란 0과 1밖에 알지 못하는 기계가 실행할 수 있을 정도로 정확하고 상세하게 요구사항을 설명하는 작업이며, 그 결과물이 바로 코드다.
 
-#### 02. 컴파일러는 뭐고 인터프리터는 뭔가요?
+### 컴파일러는 뭐고 인터프리터는 뭔가요?
 
 <img src="img/image.png" alt="컴파일러 언어와 인터프리터 언어 비교" width="600px">
 
@@ -16,13 +16,13 @@
 
 ## 자바스크립트란
 
-#### 01. 자바스크립트의 특징은 뭐가 있나요?
+### 자바스크립트의 특징은 뭐가 있나요?
 
 자바스크립트는 HTML, CSS와 함께 웹을 구성하는 요소 중 하나로 웹 브라우저에서 동작하는 유일한 프로그래밍 언어다. 또한, 자바스크립트는 개발자가 별도의 컴파일 작업을 수행하지 않는 인터프리터 언어이며 명령형, 함수형, 프로토타입기반, 객체지향 프로그래밍을 지원하는 멀티 패러다임 프로그래밍 언어다.
 
 ## 변수
 
-#### 01. 변수란 무엇인가요?
+### 변수란 무엇인가요?
 
 변수는 하나의 값을 저장하기 위해 확보한 메모리 공간 자체 또는 그 메모리 공간을 식별하기 위해 붙인 이름을 말한다.
 
