--- a/02. JavaScript.md
+++ b/02. JavaScript.md
@@ -8,7 +8,7 @@
 
 ### 컴파일러는 뭐고 인터프리터는 뭔가요?
 
-<img src="img/image.png" alt="컴파일러 언어와 인터프리터 언어 비교" width="600px">
+<img src="img/컴파일러언어와 인터프리터 언어.png" alt="컴파일러 언어와 인터프리터 언어 비교" width="600px">
 
 하지만 대부분의 모던 브라우저에서 사용되는 인터프리터 는 전통적인 컴파일러 언어처럼 명시적인 컴파일 단계를 거치지는 않지만 복잡한 과정을 거치며 일부 소스코드를 컴파일하고 실행한다.
 
