--- a/05. React.md
+++ b/05. React.md
@@ -1,1 +1,26 @@
-5.  React
+# 5. React
+
+### 리액트는 라이브러리인가요 프레임워크인가요?
+
+프레임워크
+
+- 개발자가 작업을 하기 위한 전체적인 tool 을 제공한다.
+  개발자는 틀 안에서 그 방식에 맞춰서 작업을 한다.
+
+라이브러리
+
+- 전체적인 틀이 아닌 하나의 기능만을 도구처럼 제공한다.
+  개발자는 필요한 도구(라이브러리)를 가져와서 사용한다.
+
+💡쉽게 말해 요리에 비유를 하자면 프레임워크가 주방이라면 라이브러리는 주방 도구 인것 이다.
+
+- 앵귤러와 뷰는 웹 개발을 할 때 필요한 모든 기능과 툴을 포함하고 있기 때문에 **프레임워크**라고 할 수 있다.
+- 리액트는 ui를 만드는 기능만을 제공하기 때문에 **라이브러리**라고 할 수 있다.
+
+### 리액트를 사용하는 이유
+
+React의 핵심 요소인 Virtual DOM(가상 DOM) 때문이라고 생각됩니다.
+
+웹 브라우저가 웹사이트의 텍스트 문서를 읽어서 DOM(Document Object Model)이라는 트리 구조로 바꾸어 사용자에게 보여주게 되는데, 웹 개발자들은 사용자의 반응에 따라 이 DOM 트리를 변경하여 웹사이트의 내용을 갱신합니다. 하지만 매번 작은 변화가 있을 때마다 전체 화면을 새로 그리는 것은 성능에 좋지 않습니다. React는 이 문제를 해결하기 위해 Virtual DOM을 도입하였습니다.
+
+Virtual DOM은 실제 DOM의 복제본으로, 웹 개발자들이 변화를 주고 싶은 부분만 Virtual DOM에서 수정하게 됩니다. 그 후, React는 Virtual DOM과 실제 DOM 사이의 차이점을 찾아내어, 그 차이점만 실제 DOM에 반영하게 됩니다. 불필요한 화면의 갱신을 최소화하여 성능을 향상시키는 이 방법이 React 라는 라이브러리의 선택 이유라고 생각합니다.
