[02.JS] 변수 내용 추가

--- a/02. JavaScript.md
+++ b/02. JavaScript.md
@@ -24,6 +24,133 @@
 
 ### 변수란 무엇인가요?
 
-변수는 하나의 값을 저장하기 위해 확보한 메모리 공간 자체 또는 그 메모리 공간을 식별하기 위해 붙인 이름을 말한다.
+변수는 하나의 값을 저장하기 위해 확보한 **메모리 공간 자체 또는 그 메모리 공간을 식별하기 위해 붙인 이름**을 말한다.
 
 간단히 말하자면 변수는 프로그래밍 언어에서 값을 저장하고 참조하는 메커니즘으로 값의 위치를 가리키는 상징적인 이름이다.
+
+### 식별자란 무엇인가요?
+
+변수이름을 식별자라고도 한다. **식별자는 어떤 값을 구별해서 식별할 수 있는 고유한 이름**을 말한다. 사람을 이름으로 구별해서 식별하는 것처럼 값도 식별자로 구별해서 식별할 수 있다. 즉 식별자는 메모리주소에 붙인 이름이라고 할 수 있다.
+
+### 변수를 선언한다는 것은 어떤 것을 의미하나요?
+
+변수 선언이란 변수를 생성하는 것을 말한다. 좀더 자세히 말하면 값을 저장하기 위한 메모리 공간을 확보하고 변수 이름과 확보된 메모리 공간의 주소를 연결해서 값을 저장할 수 있게 준비하는 것이다. 변수 선언에 의해 확보된 메모리 공간은 확보가 해제되기 전까지는 누구도 확보된 메모리 공간을 사용할 수 없도록 보호되므로 안전하게 사용할 수 있다.
+
+변수를 사용하려면 반드시 선언이 필요하고 변수를 선언할때에는 **var, let const** 키워드를 사용한다.
+
+### var키워드는 뭔가요??
+
+var 키워드는 뒤에 오는 변수 이름으로 새로운 변수를 선언할 것을 지시하는 키워드다.
+
+### 자바스크립트 엔진은 변수선언을 어떤 단계를 거쳐 수행하나요?
+
+자바스크립트 엔진은 변수선언을 다음과 같은 2단계에 거쳐서 수행한다.
+
+- 선언단계 : 변수 이름을 등록해서 자바스크립트 엔진에 변수의 존재를 알린다.
+- 초기화 단계 : 값을 저장하기 위한 메모리 공간을 확보하고 암묵적으로 undefined를 할당해 초기화 한다.
+
+### 호이스팅이 뭔가요?
+
+자바스크립트는 인터프리터 언어이기 때문에 변수선언문 보다 변수를 참조하는 코드가 앞에 있다면 에러가 나야하지만 그렇지 않다. 그 이유는 변수 선언이 소스코드가 한 줄씩 순차적으로 실행되는 시점, 즉 런타임이 아니라 그 이전단계에서 먼저 실행되기 때문이다.
+
+자바스크립트 엔진은 변수 선언을 포함한 모든 선언문을 소스코등서 찾아내 먼저 실행한다. 이처럼 **변수 선언문이 코드의 선두로 끌어 올려진 것처럼 동작하는 자바스크립트 고유의 특징을 변수 호이스팅**이라 한다.
+
+다만 **변수 선언은 소스코드가 순차적으로 실행되는 시점인 런타임 이전에 먼저 실행되지만 값의 할당은 소스코드가 순차적으로 실행되는 시점인 런타임에 실행**된다.
+
+### var키워드의 문제점은 무엇이 있나요??
+
+1. 변수 중복 선언 허용<br>
+   var 키워드로 선언된 변수는 같은 스코프 내에서 중복 선언이 허용되는데, 이는 의도치 않게 변수값이 재할당되어 변경되는 부작용을 발생시킨다.
+
+```javascript
+function foo() {
+  var x = 1;
+  // var 키워드로 선언된 변수는 같은 스코프 내에서 중복 선언을 허용한다.
+  // 아래 변수 선언문은 자바스크립트 엔진에 의해 var 키워드가 없는 것처럼 동작한다.
+  var x = 2;
+  console.log(x); // 2
+}
+foo();
+```
+
+2. 함수 레벨 스코프<br>
+   대부분의 프로그래밍 언어는 함수 몸체만이 아니라 모든 코드 블록(if, for, while, try/catch 등)이 지역 스코프를 만든다. 이러한 특성을 블록 레벨 스코프라 한다. 하지만 var 키워드로 선언된 변수는 오로지 함수의 코드 블록(함수 몸체)만을 지역 스코프로 인정한다. 이러한 특성을 함수 레벨 스코프라 한다.
+
+```javascript
+case 1 : var 키워드로 변수 선언
+
+var x = 1;
+
+if (true) {
+  // var 키워드로 선언된 변수는 함수의 코드 블록(함수 몸체)만을 지역 스코프로 인정한다.
+  // 함수 밖에서 var 키워드로 선언된 변수는 코드 블록 내에서 선언되었다 할지라도 모두 전역 변수다.
+  // 따라서 x는 전역 변수다. 이미 선언된 전역 변수 x가 있으므로 x 변수는 중복 선언된다.
+  // 이는 의도치 않게 변수 값이 변경되는 부작용을 발생시킨다.
+  var x = 10;
+}
+console.log(x); // 10
+
+
+case 2 : var 키워드로 for문 안의 변수 선언
+
+var i = 10;
+
+// for 문에서 선언한 i는 전역 변수다. 이미 선언된 전역 변수 i가 있으므로 중복 선언된다.
+for (var i = 0; i < 5; i++) {
+  console.log(i); // 0 1 2 3 4
+}
+
+// 의도치 않게 변수의 값이 변경되었다.
+console.log(i); // 5
+```
+
+### let키워드는 var키워드와 어떤점이 다른가요?
+
+1. 변수 중복 선언 금지<br>
+   var 키워드로 이름이 동일한 변수를 중복 선언하면 아무런 에러가 발생하지 않는다. 이때 변수를 중복 선언하면서 값까지 할당했다면 의도치 않게 먼저 선언된 변수 값이 재할당되어 변경되는 부작용이 발생한다. 하지만 let 키워드로 이름이 같은 변수를 중복 선언하면 문법 에러(SyntaxError)가 발생한다.
+
+2. 블록 레벨 스코프<br>
+   let 키워드를 통해 선언된 변수는 블록 레벨 스코프를 따른다. 함수 뿐만 아니라 모든 코드 블록 내에 선언된 변수(지역 변수)는 해당 유효 범위(스코프)를 벗어나면 사용할 수 없다.
+
+3. 변수 호이스팅<br>
+   var 키워드로 선언한 변수와 달리 let 키워드로 선언한 변수는 변수 호이스팅이 발생하지 않는 것처럼 동작한다.
+
+4. 전역 객체와 let<br>
+   let 키워드로 선언한 전역 변수는 전역 객체의 프로퍼티가 아니다. 즉, window.foo와 같이 접근할 수 없다.
+
+```javascript
+let x = 1;
+
+// let, const 키워드로 선언한 전역 변수는 전역 객체 window의 프로퍼티가 아니다.
+console.log(window.x); // undefined
+console.log(x); // 1
+```
+
+### TDZ
+
+TDZ는 const, let, class 구문의 유효성에 영향을 미치는 중요한 개념이다. TDZ는 선언 전에 변수를 사용하는 것을 허용하지 않는다.
+
+반대로 var 변수는 선언 전에도 사용할 수 있기 때문에 var 사용은 피하는 것이 좋다.
+
+### const 키워드는 어떤 특징들이 있나요?
+
+const 키워드는 상수(constant)를 선언하기 위해 사용하지만, 반드시 상수만을 위해 사용하지는 않는다. const 키워드의 특징은 let과 대부분 동일하므로 let 키워드와 다른 점을 중심으로 살펴볼 필요가 있다.
+
+1. 선언과 초기화<br>
+   const 키워드로 선언한 변수는 반드시 선언과 동시에 초기화해야 한다. 그렇지 않을 경우 문법 에러(SyntaxError)가 발생한다.
+
+```javascript
+const bar = 1;
+console.log(bar); >>> 1
+
+const foo;
+console.log(foo); >>> // SyntaxError: Missing initializer in const declaration
+```
+
+2. 재할당 금지<br>
+   var 또는 let 키워드로 선언한 변수는 재할당이 자유로우나 const 키워드로 선언한 변수는 재할당이 금지된다.
+
+3. 상수<br>
+   const 키워드로 선언한 변수에 원시 값을 할당한 경우 변수 값을 변경할 수 없다. 원시 값은 변경 불가능한 값이므로 재할당 없이 값을 변경할 수 있는 방법이 없기 때문이다. 이러한 특징을 이용해 const 키워드를 상수를 표현하는 데 사용하기도 한다.
+
+### 식별자 네이밍 규칙들은 어떤 것들이 있나요?
