--- a/02. JavaScript.md
+++ b/02. JavaScript.md
@@ -154,3 +154,37 @@ console.log(foo); >>> // SyntaxError: Missing initializer in const declaration
    const 키워드로 선언한 변수에 원시 값을 할당한 경우 변수 값을 변경할 수 없다. 원시 값은 변경 불가능한 값이므로 재할당 없이 값을 변경할 수 있는 방법이 없기 때문이다. 이러한 특징을 이용해 const 키워드를 상수를 표현하는 데 사용하기도 한다.
 
 ### 식별자 네이밍 규칙들은 어떤 것들이 있나요?
+
+- 식별자는 특수문자를 제외한 문자, 숫자, 언더스코어(\_), 달러 기호($)를 포함할 수 있다.
+- 단, 식별자는 특수문자를 제외한 문자, 언더스코어(\_), 달러 기호($)로 시작해야 한다. (숫자 X)
+- 예약어는 식별자로 사용할 수 없다.
+
+### 네이밍 컨벤션은 어떤 것들이 있나요?
+
+```js
+// 카멜 케이스 (camelCase)
+var firstName;
+
+// 스네이크 케이스 (snake_case)
+var first_name;
+
+// 파스칼 케이스 (PascalCase)
+var FirstName;
+
+// 헝가리언 케이스 (typeHungarianCase)
+var strFirstName; // type + identifier
+var $elem = document.getElementById("myId"); // DOM 노드
+var observable$ = fromEvent(document, "click"); // RxJS 옵저버블
+```
+
+### 리터럴이 뭔가요?
+
+리터럴은 데이터(값) 그 자체를 뜻한다. 즉, 변수에 넣는 변하지 않는 데이터를 의미하는 것.
+
+```js
+const a = 1;
+```
+
+여기서 a는 상수이고, 1은 리터럴이다.
+
+## 데이터 타입
