--- a/05. React.md
+++ b/05. React.md
@@ -17,10 +17,90 @@
 - 앵귤러와 뷰는 웹 개발을 할 때 필요한 모든 기능과 툴을 포함하고 있기 때문에 **프레임워크**라고 할 수 있다.
 - 리액트는 ui를 만드는 기능만을 제공하기 때문에 **라이브러리**라고 할 수 있다.
 
-### 리액트를 사용하는 이유
+### 리액트를 사용하는 이유, Virtual DOM에 대해서 아나요?
 
 React의 핵심 요소인 Virtual DOM(가상 DOM) 때문이라고 생각됩니다.
 
 웹 브라우저가 웹사이트의 텍스트 문서를 읽어서 DOM(Document Object Model)이라는 트리 구조로 바꾸어 사용자에게 보여주게 되는데, 웹 개발자들은 사용자의 반응에 따라 이 DOM 트리를 변경하여 웹사이트의 내용을 갱신합니다. 하지만 매번 작은 변화가 있을 때마다 전체 화면을 새로 그리는 것은 성능에 좋지 않습니다. React는 이 문제를 해결하기 위해 Virtual DOM을 도입하였습니다.
 
 Virtual DOM은 실제 DOM의 복제본으로, 웹 개발자들이 변화를 주고 싶은 부분만 Virtual DOM에서 수정하게 됩니다. 그 후, React는 Virtual DOM과 실제 DOM 사이의 차이점을 찾아내어, 그 차이점만 실제 DOM에 반영하게 됩니다. 불필요한 화면의 갱신을 최소화하여 성능을 향상시키는 이 방법이 React 라는 라이브러리의 선택 이유라고 생각합니다.
+
+### 리액트의 랜더링에 대해 아나요?
+
+### 리액트 파이버에 대해서 아나요?
+
+### 리액트 파이버 트리
+
+### 리액트 파이버와 DOM, Virtual DOM의 관계
+
+### 랜더 단계와 커밋 단계에 대해 아나요?
+
+### React에서 함수 컴포넌트와 클래스 컴포넌트의 차이
+
+### 리액트에서 함수형 컴포넌트라고 부르지 않고 함수 컴포넌트라고 부르는 이유가 무엇인가요?
+
+### props와 state의 차이
+
+### props가 컴포넌트간에 전달받는 것이리고 했는데 자식에서 부모로도 전달할 수 있는가?
+
+### FlUX에 대해서 아나요?
+
+FLUX는 라이브러리나 프레임워크가 아닌 추상적인 개념입니다.
+
+`MVC` 패턴에서 쌍뱡향적인 데이터 흐름을 강조했던 것과 달리 `FLUX` 패턴에서는 단방향 데이터 흐름을 강조합니다.
+
+`MVC` 패턴의 경우 사용자의 어떠한 행위(액션)가 있을 때, 이를 바탕으로 설계된 `컨트롤러`를 통해 `모델`을 변화하고 이를 `뷰`에 반영합니다.
+
+보여져야 할 `뷰`가 적거나, 변경될 `모델`이 많지 않다면 매우 효율적인 구조일 것입니다.
+
+하지만, `모델`과 `뷰`가 복잡하게 얽혀 있다면 어떤 모델이 변화되어 뷰가 변경되었는지 제대로 확인할 수 없는 경우가 생깁니다.
+
+실제로 `페이스북`에서는 `MVC` 패턴으로 설계한 구조 때문에, 아직 읽지 않은 메세지를 표시하지만, 실제로 들어가 보면 새로운 메세지가 없는 경우가 있었습니다.
+
+이를 해결하기 위해 나온 단방향 데이터 흐름을 제어하는 패턴이 `FLUX` 입니다.
+
+사용자의 행위 `액션`은 `디스패쳐`에 의해 통제됩니다. `디스패처`가 `스토어`를 업데이트하고 변경된 `스토어`에 대한 `뷰`를 리렌더링합니다.
+
+`뷰`에서는 `스토어`에 직접 접근하지 않으며, `디스패처`로 다시 액션을 보내고 `스토어`를 업데이트한 뒤, 다시 `뷰`를 리렌더링하는 단방향적 구조를 가집니다.
+
+`FLUX` 패턴은 이러한 단방향적인 데이터 흐름 구조를 통해 어떤 액션이 디스패처에 의해 어떤 결과를 낳고 변화되는지 명확히 파악하고 알아볼 수 있습니다.
+
+### 리덕스에 대해서 아나요?
+
+### 리덕스의 기본원칙은?
+
+### React에서 state의 불변성을 유지하라는 말이 있는데 이에대해 설명해달라.
+
+### 리듀서 내부에서 불변성을 지키는 이유는? 전개 연산자의 단점을 해결할 수 있는 방법은 무엇인가
+
+### 리액트 사용시에 부수효과로 인해 생기는 문제점이 있다면?
+
+- 부수효과를 일으키는 함수(불순 함수)
+- 부수효과를 일으키지 않는 함수(순수 함수)
+
+### 컴포넌트의 라이프 사이클 메서드
+
+- 이해
+- 매서드 종류
+
+### Hook의 종류
+
+- useState
+- useEffect
+- useReducer
+- useMemo
+- useCallback
+- useRef
+- 커스텀 Hooks
+
+### useMemo와 useCallback의 차이를 아나요
+
+### 리액트에서 setState는 비동기 동작인가요 동기 동작인가요?
+
+### setState가 비동기 동작을 취했을때 얻을 수 있는 이점은 무엇인가요
+
+### useState가 비동기 동작을 취했을 대 얻을 수 있는 이점은 무엇인가요?
+
+### useLayoutEffect는 무엇인가요?
+
+### 리액트의 성능 개선방법에 대해서 설명해주세요
