[08.강의필기] 내용 추가

--- a/08. 강의 필기.md
+++ b/08. 강의 필기.md
@@ -8,7 +8,31 @@
 
     컴퓨터가 어떻게 발명되었고, 시간이 지나면서 어떻게 진화했으며 지금은 어떻게 작동하는지, 또한 'IT 지원 전문가'란 무엇이며, 어떤 일을 하는지도 배웁니다. 이 모듈을 마치고 나면, 바이너리를 사용하여 컴퓨터처럼 계산하는 방법을 알게 되며 이런 계산 방식이 왜 그렇게 강력한 힘을 가지는지를 이해할 수 있습니다.
 
+- 역사적으로 데이터를 저장하는데 사용된 구멍이 있는 카드는 **펀치카드** 이다.
+- **알고리즘**은 특정 문제를 해결하는 일련의 단계이다.
+- **암호화**는 코드를 작성하고 해결하는 기술이다.
+- 오늘날 사용되는 세가지 주요 데스크톱 운영체제는 **windows, Mac OS, Linux**이다.
+- 자유롭게 배포, 수정 및 공유할 수 있는 소프트웨어는 **오픈소스(Open-source)**이다
+
+- 디지털 로직 : 바이너리 연습퀴즈
+  <img src="img/바이너리 연습퀴즈.jpg" alt="바이너리 연습퀴즈">
+
+- 컴퓨터 아키텍처 레이어 : 컴퓨터 아키텍처 연습퀴즈
+  <img src="img/컴퓨터 아키텍처 연습퀴즈.jpg" alt="컴퓨터 아키텍처 연습퀴즈">
+
 #### 하드웨어
+
+- 컴퓨터의 기능을 확장하기 위해 기기를 컴퓨터의 연결 지점에 연결할 수 있습니다. 이 연결지점을 **포트**라고 한다.
+- **CPU**는 컴퓨터의 두뇌라고 할 수 있다. 모든 계산 및 데이터 처리를 수행한다.
+- **RAM**은 컴퓨터의 단기 메모리다. 데이터를 임시로 저장하고 싶을 때 이 구성요소를 사용한다.
+- 장기기억에 무언가를 사용하고 싶을때에는 **하드 드라이브**를 사용한다. 음악, 사진, 애플리케이션 등 모든 데이터가 저장된다.
+- **마더보드(메인보드)**는 모든 구성요소를 제자리에 배치라고 서로 통신하게 한다. 컴퓨터의 기반으로서 우리몸으로 보자면 몸체라고 할 수 있다. 모든 부분을 함께 연결하는 컴퓨터의 순환 시스템이라고 생각해도 된다.
+- **전원공급장치**는 전원 콘센트를 통해 들어오는 전기를 컴퓨터가 사용할 수 있는 형식으로 변환하여 공급한다.
+- **프로그램**은 컴퓨터에 무엇을 해야 할지 알려주는 기본 명령어이다.
+- **레지스터**: CPU가 계산을 수행할 때 먼저 레지스터에 정보를 저장한다.
+- 바이너리 데이터와 메모리 주소를 전송하기 위해 어떤 메커니즘을 사용할까? EDB는 이진 데이터를 전송하는 데 사용되며 주소 버스는 메모리 주소를 전송하는 데 사용됩니다.
+- **바이너리(Binary)**란, 0과 1로 이루어진 이진수(binary code)로 이루어진 파일을 의미한다. 컴퓨터에서는 바이너리 파일을 CPU가 직접 읽어들여 명령어(instruction)를 수행하며, 기계어(machine code)라고도 한다.
+- 기계의 물리적 구성요소로 작업하기 전에 전기가 아주 조금만 통해도 섬세한 컴퓨터 구성요소가 손상될 수 있으므로 항상 접지해야 한다
 
 #### 운영체제
 
