--- a/04. CSS.md
+++ b/04. CSS.md
@@ -1,1 +1,25 @@
-4.  CSS
+# 04. CSS
+
+## display
+
+### block
+
+항상 새로운 라인에 요소가 시작되고 화면 크기의 전체 가로폭을 영역으로 차지한다. width 속성 값을 부여해주면 그 너비만큼 영역을 차지한다.
+
+### inline
+
+새로운 라인에서 시작되지 않으며 다른 요소들과 같은 줄에 배치될 수 있고 content 너비만큼의 영역을 차지한다. 그리고 width, height, margin-top, margin-bottom 속성이 적용이 되지 않는다.
+
+### inline-block
+
+block 레벨 요소와 inline 레벨 요소의 특징을 모두 가지고 있다. 한 줄에서 inline 레벨 요소들과 같이 배치될 수 있으며 width와 height 속성으로 영역의 크기를 지정할 수 있다.
+
+### none
+
+아예 사라지게 하는것. 보이지도 않고 해당 공간도 존재하지 않게 됨
+
+display:none과 `visibility:hidden`의 차이점
+| 구분 | 차이점 |
+| --- | --- |
+| display: none | 보이지도 않고 해당 공간도 존재하지 않게 됨 |
+| visibility: hidden | 보이지만 않고 해당 공간은 존재. width와 height값을 주었다면 그만큼 공간은 존재하게 됨 |
