[08.강의필기] 내용 추가

--- a/08. 강의 필기.md
+++ b/08. 강의 필기.md
@@ -36,6 +36,84 @@
 
 #### 운영체제
 
+파일을 보관할 때, 특히 많은 파일을 다룰 때 문제가 발생할 수 있습니다. 컴퓨터에서 수십만 개의 파일을 저장할 수 있지만, 이들을 효과적으로 추적하고 관리하는 것이 중요합니다. 이를 위해 커널은 파일 스토리지와 파일 시스템을 관리합니다.
+
+파일을 처리할 때는 다음 세 가지 주요 구성 요소가 있습니다:
+
+1. 파일 시스템: 새로운 하드 디스크를 구성할 때, 디스크를 포맷하고 파일 시스템을 설정해야 합니다. 파일 시스템은 데이터를 저장하고 추적하는 방식에 영향을 미칩니다. 다양한 파일 시스템이 있으며, 각기 다른 용도와 특성을 갖고 있습니다. 예를 들어:
+
+- Windows: NTFS는 암호화와 빠른 액세스 속도를 제공하며, ReFS는 아직 소비자용이 아닙니다.
+- Mac OS: HFS+는 저널링 기능으로 시스템 장애 시 상태를 잘 저장합니다.
+- Linux: ext4가 표준 파일 시스템으로 널리 사용됩니다.
+
+2. 파일 데이터: 파일 데이터는 하드 드라이브에 블록 단위로 저장됩니다. 데이터는 여러 조각으로 나뉘어 저장될 수 있으며, 블록 스토리지는 데이터를 더 빠르게 처리하고 저장 공간을 효율적으로 활용합니다.
+
+3. 파일 메타데이터: 파일의 메타데이터는 파일에 대한 정보를 제공합니다. 여기에는 파일의 생성자, 수정일, 접근 권한, 파일 확장자 등이 포함됩니다. 예를 들어, cool_image.jpg의 .jpg는 이미지 파일임을 나타냅니다.
+
+파일 시스템의 종류와 차이를 이해하는 것은 IT 지원 전문가에게 중요한 스킬입니다. 이는 데이터 복구, 다중 운영 체제 부팅 설정 등 다양한 상황에서 유용하게 사용됩니다.
+
+---
+
+커널의 주요 작업 중 하나는 프로세스 관리입니다. 프로세스는 현재 실행 중인 프로그램을 의미하며, 프로그램은 실행 가능한 애플리케이션입니다. 같은 프로그램의 여러 프로세스를 동시에 실행할 수 있습니다. 예를 들어, 여러 개의 Chrome 창은 모두 같은 프로그램의 서로 다른 프로세스입니다.
+
+커널은 프로세스에 RAM과 CPU와 같은 컴퓨터 리소스를 효율적으로 배분해야 합니다. CPU는 하나뿐이지만, 커널은 타임 슬라이스라는 짧은 시간 간격을 사용해 프로세스를 순차적으로 실행합니다. 이 방식 덕분에 프로세스가 동시에 실행되는 것처럼 보이지만 실제로는 빠르게 전환되며 실행됩니다.
+
+문제가 발생할 수 있는 상황으로는, 특정 프로세스가 예상보다 더 많은 타임 슬라이스를 차지하거나, 많은 프로세스가 동시에 CPU 시간을 요구할 때입니다. 이런 경우 커널이 리소스를 효율적으로 관리하더라도 시스템이 느려질 수 있습니다. 이때는 수동으로 개입하여 문제를 해결해야 할 수도 있습니다.
+
+커널은 프로세스의 생성, 스케줄링, 종료와 관련된 모든 작업을 관리하며, 종료된 프로세스가 사용한 리소스를 회수하고 다른 프로세스에 재할당합니다.
+
+---
+
+프로세스가 실행될 때는 CPU 시간과 메모리가 필요합니다. 메모리는 하드 디스크 드라이브보다 훨씬 작기 때문에, 가상 메모리를 사용하여 물리적 메모리(RAM)와 하드 드라이브의 공간을 결합합니다.
+
+가상 메모리는 페이지라는 단위로 데이터를 메모리와 하드 드라이브 사이에서 이동시키는 시스템입니다. 큰 애플리케이션을 실행할 때, 전체 프로그램을 RAM에 저장하는 것은 비효율적입니다. 대신, 사용 중인 부분만 RAM으로 로드하여 효율적으로 작업합니다. 이는 요리책에서 현재 레시피만 보는 것과 비슷합니다.
+
+가상 메모리에서 RAM으로 페이지를 로드할 때, 하드 드라이브의 스왑 공간이 사용됩니다. 커널은 이 스와핑 작업을 처리하여 필요한 데이터가 RAM으로 이동할 수 있도록 합니다. 이 과정 덕분에 시스템은 메모리 자원을 효율적으로 관리할 수 있습니다.
+
+다음 시간에는 I/O 관리에 대해 알아볼 것입니다.
+
+---
+
+커널은 컴퓨터에서 중요한 여러 작업을 수행합니다. 여기에는 파일 처리, 메모리 관리, 프로세스 관리 외에도 입력 및 출력(I/O) 관리가 포함됩니다. I/O 장치에는 모니터, 키보드, 마우스, 하드 드라이브, 스피커, 블루투스 헤드셋, 웹캠, 네트워크 어댑터 등이 있으며, 커널은 이 장치들을 관리하고 드라이버를 통해 하드웨어와 소통합니다.
+
+커널은 장치 간의 데이터 전송과 상호 통신을 관리하며, 최적의 전송 방법을 결정하고 데이터 오류를 방지하려고 합니다. 시스템이 느려지는 문제는 종종 하드웨어 리소스 부족, 즉 RAM, CPU, 또는 I/O 장치의 과부하로 인해 발생합니다.
+
+IT 지원에서 문제 해결 시, 느려지는 원인을 파악하는 것은 매우 중요합니다. 이는 시스템의 성능을 향상시키고 사용자 경험을 개선하는 데 도움이 됩니다. 다음 강의에서는 이러한 문제 해결 우수 사례를 다룰 예정입니다.
+
+---
+
+운영체제의 마지막 주요 측면은 사용자가 운영체제와 상호작용하는 방법입니다. 이를 사용자 공간이라고 부릅니다. 사용자 공간에는 두 가지 주요 방식이 있습니다:
+
+- 그래픽 사용자 인터페이스(GUI): 마우스를 사용하여 아이콘을 클릭하고, 메뉴를 탐색하며, 시각적으로 컴퓨터와 상호작용하는 방법입니다. 대부분의 사람들이 GUI를 사용하고 있으며, 이는 일상적인 컴퓨터 작업에서 자주 접하는 방식입니다.
+
+- 명령줄 인터페이스(CLI): 텍스트 명령어를 입력하여 운영체제와 상호작용하는 방법입니다. GUI가 도입되기 전에는 CLI가 주로 사용되었고, 현재도 파워 유저들이 CLI를 사용합니다. 특히 Linux에서는 CLI가 중요한 도구로 사용되며, 다양한 셸이 존재합니다. 예를 들어, Linux의 배쉬(Bash) 셸이 대표적입니다.
+
+GUI와 CLI 각각의 장점이 있으며, IT 지원 직무에서는 두 가지 모두를 아는 것이 중요합니다. CLI를 사용하면 여러 기기에 동시에 명령을 내릴 수 있어 효율적인 관리가 가능하며, 고급 IT 작업에서는 CLI가 필수적입니다.
+
+이 강좌에서는 GUI와 CLI의 사용법을 배우고, 시스템 애플리케이션과 라이브러리를 통해 운영체제와 상호작용하는 방법도 다룹니다. GUI와 셸을 적절히 활용하는 방법을 익히는 것이 IT 지원 업무에서 매우 중요합니다.
+
+---
+
+- **로그**은(는) 컴퓨터에 시스템 이벤트를 기록하는 파일로, 마치 시스템의 일기장과 같다.
+
+컴퓨터의 문제를 해결하려면 시스템 로그를 활용할 수 있습니다. 시스템 로그는 컴퓨터의 사건을 기록하는 파일로, 전원 켜기, 드라이버 로딩, 오류 발생 등 다양한 이벤트가 기록됩니다. 이 로그는 문제의 원인을 파악하는 데 유용하며, 문제 해결을 위한 중요한 정보를 제공합니다.
+
+로그는 때로는 복잡할 수 있지만, 시간을 들여 분석하면 문제의 원인을 찾을 수 있습니다. 이 강좌에서는 로그 활용 방법과 기술적 세부 사항을 자세히 다룰 예정입니다. 로그를 통해 컴퓨터의 문제를 진단하고 해결하는 능력을 갖추게 되면, 작은 목소리로 문제를 알려주지 않는 시스템의 문제도 스스로 해결할 수 있습니다.
+
+---
+
+운영체제의 부팅 과정은 컴퓨터가 켜질 때부터 운영체제가 완전히 로드될 때까지의 일련의 단계를 포함합니다. 부팅이라는 용어는 "부츠에 달린 끈"에서 유래된 것으로, 시스템이 처음부터 완전하게 작동되는 상태로 만드는 과정입니다. 부팅 과정은 대개 다음과 같은 단계를 포함합니다:
+
+1. 전원 켜기: 컴퓨터의 전원이 켜집니다.
+2. BIOS/UEFI: 하드웨어를 초기화하고 시스템이 제대로 작동하는지 확인하는 소프트웨어가 실행됩니다.
+3. POST: 하드웨어의 진단 테스트를 수행하여 문제를 검사합니다.
+4. 부팅 장치 선택: BIOS/UEFI 설정에 따라 하드 드라이브, USB 드라이브, CD 드라이브 등에서 부트로더를 찾습니다.
+5. 부트로더 실행: 운영체제를 로딩하는 작은 프로그램이 실행됩니다.
+6. 운영체제 로딩: 부트로더가 운영체제를 로딩하고, 커널이 로딩되어 컴퓨터 리소스를 제어합니다.
+7. 시스템 프로세스 및 사용자 공간 항목 시작: 사용자 로그인, 데스크톱 환경 등이 시작되어 사용자가 시스템과 상호작용할 수 있게 됩니다.
+
+이 과정이 완료되면 컴퓨터를 사용하여 작업을 시작할 수 있습니다.
+
 #### 네트워킹
 
 #### 소프트웨어
