--- a/07. 기타.md
+++ b/07. 기타.md
@@ -1,1 +1,90 @@
 7.  기타
+
+# SEO 지식
+
+> SEO는 웹사이트가 검색 엔진 결과 페이지(SERP)에서 높은 순위를 차지하게 하여 더 많은 트래픽을 유도하는 것을 목표로 합니다. 개발자가 SEO를 이해하고 있으면 웹사이트의 성능과 가시성을 크게 향상시킬 수 있습니다.
+
+<details>
+<summary>SEO 지식을 알아두면 좋은 이유</summary>
+<div markdown="1">
+
+>     ### 1. **웹사이트의 검색 가시성 향상**
+>
+>     검색 엔진은 사용자에게 가장 관련성 높은 정보를 제공하기 위해 웹사이트의 구조, 내용, 성능 등을 분석합니다. 개발자는 SEO 최적화를 통해 웹사이트가 검색 엔진에서 더 쉽게 크롤링되고 인덱싱될 수 있도록 해야 합니다. 이는 웹사이트의 검색 가시성을 높이고, 더 많은 방문자를 유도하는 데 필수적입니다.
+>
+>     ### 2. **페이지 로딩 속도 최적화**
+>
+>     SEO에서 페이지 로딩 속도는 중요한 요소입니다. 검색 엔진은 빠른 로딩 속도를 사용자 경험의 중요한 부분으로 간주합니다. 개발자는 효율적인 코드 작성, 이미지 최적화, 캐싱 설정 등을 통해 페이지 로딩 속도를 최적화할 수 있습니다. 이는 사용자 만족도와 검색 엔진 순위에 긍정적인 영향을 미칩니다.
+>
+>     ### 3. **모바일 최적화**
+>
+>     모바일 사용자가 증가함에 따라 모바일 친화적인 웹사이트는 SEO에 중요한 요소가 되었습니다. 개발자는 반응형 디자인을 구현하고, 모바일 사용자를 위한 최적화를 통해 검색 엔진에서 더 높은 순위를 차지할 수 있습니다.
+>
+>     ### 4. **웹 표준 준수 및 접근성**
+>
+>     검색 엔진은 웹 표준을 준수하고 접근성이 좋은 웹사이트를 선호합니다. 올바른 HTML 구조, 적절한 메타 태그 사용, 그리고 접근성을 고려한 개발은 SEO에 긍정적인 영향을 미칩니다. 이는 또한 모든 사용자가 웹사이트에 접근할 수 있도록 보장합니다.
+>
+>     ### 5. **기술적 SEO 요소 이해**
+>
+>     URL 구조, 리다이렉트 설정, 사이트맵 생성, robots.txt 파일 설정 등 기술적 SEO 요소는 개발자의 영역입니다. 이러한 요소들을 잘 이해하고 관리함으로써, 검색 엔진이 웹사이트를 올바르게 이해하고 인덱싱할 수 있도록 돕습니다.
+>
+>     ### 6. **협업 능력 향상**
+>
+>     SEO는 단순히 개발자의 영역이 아니라 마케팅, 콘텐츠 팀과의 협업이 필요한 부분입니다. 개발자가 SEO 지식을 갖추고 있으면, 이러한 팀들과 더 원활하게 소통하고 협업할 수 있습니다. 이를 통해 전체적인 웹사이트 성능과 마케팅 효과를 극대화할 수 있습니다.
+>
+>     ### 7. **SEO 문제 해결 능력**
+>
+>     웹사이트 운영 중 발생할 수 있는 다양한 SEO 문제(예: 크롤링 오류, 중복 콘텐츠, 인덱싱 문제 등)를 신속하게 해결할 수 있는 능력이 중요합니다. 개발자는 이러한 문제를 진단하고 해결하는 데 중요한 역할을 합니다.
+
+</div>
+</details>
+
+- HTTP 프로토콜
+- 메타태그
+- 시맨틱태그
+
+# CS 지식
+
+> 걍 필요함 ㅇㅇ ㅋㅋㅋㅋ ㅇㅈ
+
+- 정처기
+- 프론트엔드 면접질문 - (도서)면접을 위한 cs 전공지식 노트
+  https://github.com/junh0328/prepare_frontend_interview/tree/main?tab=readme-ov-file
+  https://github.com/Esoolgnah/Frontend-Interview-Questions?tab=readme-ov-file
+- FTP 사용방법
+- IP 변경
+- DNS 변경
+- 스키마
+
+[프론트엔드 면접질문 모음.pages](https://prod-files-secure.s3.us-west-2.amazonaws.com/d0422a64-bc33-4c68-85c0-710a177a4fe5/6a3d9f3f-139b-4266-a7b5-9e1a330e5d04/%E1%84%91%E1%85%B3%E1%84%85%E1%85%A9%E1%86%AB%E1%84%90%E1%85%B3%E1%84%8B%E1%85%A6%E1%86%AB%E1%84%83%E1%85%B3_%E1%84%86%E1%85%A7%E1%86%AB%E1%84%8C%E1%85%A5%E1%86%B8%E1%84%8C%E1%85%B5%E1%86%AF%E1%84%86%E1%85%AE%E1%86%AB_%E1%84%86%E1%85%A9%E1%84%8B%E1%85%B3%E1%86%B7.pages)
+
+코드상의 팁
+
+html 코드 작성할때 태그의 시작과 끝에 주석을 달아서 표기해주면 파악하기가 쉽다
+
+```PHP
+<!-- 메인 헤드라인 -->
+    <div class="mi-top-box">
+		<!-- 2023 이전버전
+		<div class="mi-top-news">
+		<?php
+			include(MAIN_1."webdata/content/main_headline.htm");
+			include(MAIN_1."webdata/content/main_top_news_2022.htm");
+			include(MAIN_1."webdata/content/main_hd_listnews_2022.htm");
+		?>
+		</div>
+		-->
+		<!-- 메인 헤드라인 -->
+		<section class="mi-top-box">
+			<!-- 헤드라인 2023 추가 -->
+			<?php include(MAIN_1."webdata/content/main_top_news_2023.htm"); ?>
+			<!-- //헤드라인 2023 추가 -->
+
+			<!-- 주요기사 2023추가 -->
+			<?php include(MAIN_1."webdata/content/main_top_newsList_2023.htm"); ?>
+			<!-- //주요기사 2023추가 -->
+		</section>
+		<!-- //메인 헤드라인 -->
+	</div>
+    <!-- //메인 헤드라인 -->
+```
