--- a/08. 강의 필기.md
+++ b/08. 강의 필기.md
@@ -369,6 +369,23 @@ IPv4 주소의 제한을 해결하기 위해 IPv6 주소가 도입되었으며, 
 
 ---
 
+문제 해결에서 가장 중요한 단계는 정보 수집입니다. 사용자에게 질문을 통해 문제의 정확한 상황을 파악하는 것이 필수적입니다. 문제를 진단하고 해결하기 전에, 사용자가 겪고 있는 상황을 자세히 이해해야 합니다.
+
+**문제 해결 과정**:
+
+1. 정보 수집: 문제를 해결하기 전에 사용자에게 상황에 대한 자세한 정보를 요청합니다. 예를 들어, 사용자가 “컴퓨터가 고장 났어요”라고 할 때, 문제의 세부사항을 파악하기 위해 추가 질문을 해야 합니다.
+
+2. 적절한 대응: 문제를 파악한 후, 적절한 해결책을 제시합니다. 사용자에게 기술적인 문제를 해결할 수 있는 방법을 안내합니다.
+
+3. 정중한 태도 유지: 문제를 해결할 때 사용자에게 창피를 주지 않도록 주의합니다. 사용자에게 긍정적인 경험을 제공하는 것이 중요합니다.
+
+**예시 시나리오**:
+
+- 문제: 컴퓨터 화면이 켜지지 않음
+- 해결 방법: 화면 밝기 설정 확인 (밝기 조정)
+
+IT 지원에서 문제 해결 능력은 기술적 지식뿐만 아니라 효과적인 커뮤니케이션과 서비스 태도도 포함됩니다. 다음 단계에서는 문제를 분리하고 해결하는 방법을 배우게 됩니다.
+
 #### 문제 해결
 
 ### 컴퓨터 네트워킹의 모든 것
