--- a/08. 강의 필기.md
+++ b/08. 강의 필기.md
@@ -369,6 +369,8 @@ IPv4 주소의 제한을 해결하기 위해 IPv6 주소가 도입되었으며, 
 
 ---
 
+#### 문제 해결
+
 문제 해결에서 가장 중요한 단계는 정보 수집입니다. 사용자에게 질문을 통해 문제의 정확한 상황을 파악하는 것이 필수적입니다. 문제를 진단하고 해결하기 전에, 사용자가 겪고 있는 상황을 자세히 이해해야 합니다.
 
 **문제 해결 과정**:
@@ -386,7 +388,98 @@ IPv4 주소의 제한을 해결하기 위해 IPv6 주소가 도입되었으며, 
 
 IT 지원에서 문제 해결 능력은 기술적 지식뿐만 아니라 효과적인 커뮤니케이션과 서비스 태도도 포함됩니다. 다음 단계에서는 문제를 분리하고 해결하는 방법을 배우게 됩니다.
 
-#### 문제 해결
+---
+
+문제 분리는 문제의 범위를 줄여서 근본 원인을 찾는 데 도움이 되는 방법입니다. 이 과정에서 다음과 같은 접근법을 사용할 수 있습니다:
+
+1. 범위 좁히기: 문제를 해결하기 위해 먼저 문제의 범위를 좁히는 것이 중요합니다. 예를 들어, 100보다 작은 숫자를 맞추는 게임에서 질문을 통해 범위를 점점 줄여 나가는 것처럼, 문제의 범위를 축소시켜 올바른 영역에서 해결책을 찾습니다.
+
+2. 문제 영역 줄이기: 문제 분리 기법을 사용하면 문제를 일으킬 수 있는 원인을 좁히고, 효과적으로 문제를 진단할 수 있습니다. 예를 들어, 이메일 사용 문제를 해결하기 위해 사용자의 다른 기기에서도 이메일을 확인해보는 방법을 사용합니다.
+
+3. 근본 원인 찾기: 문제 분리를 통해 근본 원인을 찾을 수 있습니다. 근본 원인을 알면 반복적인 문제를 예방할 수 있습니다. 예를 들어, 이메일 서버의 다운 문제를 확인한 경우, 서버의 문제인지 사용자 장비의 문제인지 파악할 수 있습니다.
+
+4. 실제 시나리오: 바람직한 문제 해결 예로는 사용자의 문제를 여러 기기에서 확인하고, 서버의 상태를 점검하여 문제를 해결하는 접근이 포함됩니다. 반면, 바람직하지 않은 예는 문제의 원인에 대한 충분한 진단 없이 임의로 애플리케이션을 제거하고 재설치하는 것과 같습니다.
+
+문제 분리 방법을 통해 문제의 범위를 줄이고 근본 원인을 찾는 것은 문제를 보다 효율적으로 해결하는 데 필수적입니다.
+
+---
+
+문제 추적하기는 문제가 처음 발생한 지점을 돌아가 문제의 원인을 파악하고 해결하는 방법입니다. 이 접근법은 문제의 발생 시점과 그 전후의 변화를 확인하여 문제의 근본 원인을 찾는 데 유용합니다. 다음과 같은 절차로 진행할 수 있습니다:
+
+1. 문제 발생 시점 확인: 문제가 발생한 시점을 확인하여 언제부터 문제가 시작되었는지 물어보는 것이 중요합니다. 사용자로부터 "언제부터 문제가 발생했는지"와 같은 정보를 얻을 수 있습니다.
+
+2. 변경 사항 조사: 문제 발생 시점 전후로 시스템이나 소프트웨어에서 어떤 변경이 있었는지 조사합니다. 예를 들어, 앱 업데이트 후 문제가 발생했는지 확인하는 것입니다.
+
+3. 로그 분석: 시스템 로그를 검토하여 문제 발생 시점의 이벤트를 조사합니다. 로그는 시스템의 일기장 역할을 하며, 오류 메시지나 이벤트 기록을 통해 문제의 근본 원인을 찾는 데 도움이 됩니다.
+
+4. 오류 메시지 활용: 오류 메시지는 문제를 해결하는 데 중요한 단서를 제공합니다. 여러 오류 메시지 중 첫 번째 오류부터 해결하는 것이 효과적입니다. 일부 오류는 사소하게 보일 수 있지만, 전체 시스템 문제를 해결하는 데 중요한 역할을 할 수 있습니다.
+
+5. 문제 역추적: 로그에서 오류가 처음 발생한 지점을 추적하여 근본 원인을 파악합니다. 예를 들어, "펀 캣" 앱의 문제를 조사할 때, 앱 업데이트와 관련된 버그를 발견할 수 있습니다.
+
+문제 추적하기는 문제 해결에 있어 매우 중요한 기법으로, 문제 발생의 원인을 정확히 파악하고 시스템의 전체 문제를 해결하는 데 효과적입니다.
+
+---
+
+문제를 해결할 때 가장 효과적인 접근 방법은 **가장 빠른 단계 먼저 시도하기**입니다. 이 방법의 핵심은 문제 해결을 위해 가장 간단하고 빠르게 시도할 수 있는 해결책부터 시작하는 것입니다. 이 방법을 사용하면 시간과 노력을 절약하면서도 효율적으로 문제를 해결할 수 있습니다. 다음은 이 접근법을 적용하는 방법입니다:
+
+1. 문제 분리: 문제를 근본 원인으로 분리한 후, 여러 해결 옵션이 제공될 때 가장 빠르게 시도할 수 있는 옵션을 찾습니다.
+
+2. 빠른 해결책 우선 적용: 여러 해결 방법 중에서 가장 간단하고 빠르게 시도할 수 있는 방법부터 시작합니다. 예를 들어, 소프트웨어 문제의 경우 소프트웨어 재설치보다는 먼저 컴퓨터를 재부팅해 보는 것이 좋습니다.
+
+3. 효과 확인: 첫 번째 해결책을 시도한 후 문제 해결 여부를 확인합니다. 만약 효과가 없다면 다음 해결 단계를 시도합니다.
+
+4. 시간 절약: 가장 빠르게 확인할 수 있는 방법을 먼저 시도함으로써 문제 해결 과정에서 소중한 시간을 절약할 수 있습니다. 이는 사용자와 지원팀 모두에게 유익합니다.
+
+예시 시나리오:
+
+- 문제: 소프트웨어가 동작하지 않음.
+  해결 단계:
+- 가장 빠른 단계: 컴퓨터를 재부팅.
+- 그 다음 단계: 소프트웨어를 재설치.
+
+이 접근법을 사용하면 문제 해결 과정이 더 체계적이고 효율적으로 진행됩니다. 사용자와 지원팀의 시간 모두 소중하기 때문에, 문제 해결을 시작할 때 가장 빠른 해결책을 먼저 시도하는 것이 중요합니다.
+
+---
+
+문제 해결을 할 때 피해야 할 주요 주의사항은 다음과 같습니다:
+
+- 자동 조정 모드로 일하지 마세요: 문제를 습관적으로 자동으로 처리하지 말고, 항상 문제를 완전히 이해하고 데이터를 수집하세요. 작은 변수나 변화가 문제 해결에 큰 영향을 줄 수 있습니다. 자동 조정 모드로 잘못된 해결 방법을 반복하는 것보다, 문제를 정확히 이해하고 적절한 해결책을 찾는 것이 더 효율적입니다.
+
+- 근본 원인을 간과하지 마세요: 사소한 문제를 단순히 해결하는 것에 그치지 말고, 문제의 근본 원인을 파악하는 데 집중하세요. 사소한 문제 뒤에 숨겨진 심각한 문제가 있을 수 있습니다. 문제를 깊이 조사하고 관련 문제와 가능한 솔루션을 점진적으로 테스트함으로써 근본 원인을 식별하고, 시간과 노력을 절약할 수 있습니다.
+
+이러한 주의사항을 염두에 두고 문제를 해결하면, IT 지원 전문가로서 더 효과적이고 보람 있는 결과를 얻을 수 있습니다.
+
+---
+
+고객 서비스는 IT 지원에서 중요한 기술이며, 효과적인 상호작용을 위해 다음과 같은 기법과 주의사항을 기억해야 합니다:
+
+1. 공감: 공감은 단순히 동정심을 보이는 것이 아니라, 다른 사람의 감정을 이해하고 그들의 입장에서 상황을 보는 것입니다. 공감은 사용자의 경험을 이해하고 지원하는 데 필수적입니다.
+
+2. 어조: 어조는 대면 상호작용뿐만 아니라 문자와 이메일에서도 중요합니다. 친근하고 호기심을 보이는 어조가 긍정적인 경험을 제공하지만, 과도하게 친근하면 진정성이 부족해 보일 수 있습니다. 어조를 조절하여 필요한 정보를 제공하면서도 사용자와의 소통을 원활하게 해야 합니다.
+
+3. 사용자 인정: 문제 해결 과정에서 사용자에게 지속적으로 상황을 알려주고, 필요한 경우에는 자신의 행동을 인정하며 사과하는 것이 중요합니다. 사용자가 이해하고 기다릴 수 있도록 하며, 상호작용의 어색함을 줄이세요.
+
+4. 신뢰 구축: 신뢰는 사용자와의 관계에서 핵심입니다. 신뢰를 구축하기 위해서는 공감과 인정, 약속 이행, 그리고 정직한 소통이 필요합니다. 약속을 지키고, 실수를 인정하며, 솔직하게 대하는 것이 중요합니다.
+
+이러한 기법들을 활용하면, 사용자와의 상호작용을 효과적으로 진행하고 긍정적인 고객 경험을 제공할 수 있습니다.
+
+---
+
+고객 서비스는 IT 지원에서 중요한 요소입니다. 상호작용을 효과적으로 진행하기 위해 다음과 같은 기법과 주의사항을 기억해야 합니다:
+
+1. 첫인상: 사용자가 처음 상호작용을 시작할 때 긍정적이고 전문적인 인상을 주는 것이 중요합니다. 이름을 사용하고, 긍정적인 어조를 유지하며, 맞춤법과 문법에 신경 써야 합니다.
+
+2. 상호작용의 시작: 지나치게 긍정적이거나 친근하게 대하기보다는 전문적이고 존중하는 태도로 접근하세요. 사용자와의 첫 상호작용에서 신뢰를 쌓는 것이 중요합니다.
+
+3. 사용자의 감정 인정: 사용자의 문제를 이해하고 공감하며, 감정을 인정하는 것이 신뢰를 구축하는 데 도움이 됩니다. 사용자가 겪고 있는 문제에 대해 관심을 가지고 있다는 것을 보여주세요.
+
+4. 질문과 응답: 사용자의 질문에 적극적으로 대응하고, 필요할 경우 맥락을 설명하여 신뢰를 쌓으세요. 사용자의 질문을 무시하거나 불친절하게 대하지 않도록 주의하세요.
+
+5. 문제 명확화: 문제를 정확히 이해하는 것이 중요합니다. 사용자가 겪고 있는 문제를 명확히 하고, 그에 따른 적절한 해결책을 제공해야 합니다.
+
+6. 상호작용의 종료: 상호작용의 마지막 5분은 긍정적인 인상을 남기기 위한 중요한 시간입니다. 문제를 해결한 후에는 해결된 문제를 반복해서 설명하고, 다음 단계를 안내하며, 추가 질문이 있는지 물어보세요.
+
+이러한 기법들을 통해 사용자의 신뢰를 얻고, 효과적으로 문제를 해결할 수 있습니다.
 
 ### 컴퓨터 네트워킹의 모든 것
 
