--- a/08. 강의/Google IT 지원 수료증 이수 과정/01. 기술 지원 기초.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/01. 기술 지원 기초.md
@@ -542,3 +542,91 @@ IT 분야에서 작업을 문서화하는 것은 시간 낭비처럼 보일 수 
 
 - 문서를 잘 작성하면 시간이 절약되고, 문제를 더 효율적으로 해결할 수 있습니다.
 - 기록을 남기지 않으면 동일한 문제를 해결하는 데 시간이 반복적으로 소요될 수 있습니다.
+
+---
+
+면접에서 긴장을 줄이고 실력을 발휘하기 위해 다음과 같은 방법들을 연습하세요:
+
+1. 모의 면접: 실제 면접처럼 연습하여 자신감을 키우세요. 친구나 가족에게 모의 면접을 요청하면 좋습니다. 모의 면접을 통해 자신의 의사를 명확히 표현하는 능력을 향상시킬 수 있습니다.
+
+2. 기술 개념 설명 연습: DHCP, DNS, Active Directory 등의 기술 개념을 일반인에게 설명하는 연습을 통해 복잡한 개념을 쉽게 풀어내는 능력을 기르세요.
+
+3. 문제 해결 시나리오 연습: 실제 문제 해결 시나리오를 만들어 연습하고, 답변하는 과정에서 적극적으로 경청하고 관련 질문을 하세요.
+
+4. 면접관과 면접자 역할 교환: 비슷한 직무의 면접을 준비하는 사람과 함께 연습하면 서로의 질문에 대한 최선의 답변을 이해할 수 있습니다.
+
+5. 자연스러운 대화 연습: 답변을 암기하기보다는 같은 개념을 다양한 방식으로 설명하며 자연스럽게 대화하는 연습을 하세요.
+
+6. 엘리베이터 피치 연습: 자신이 누구인지, 어떤 일을 찾고 있는지 간략히 설명하는 연습을 하고, 어떻게 들리는지 확인하세요. 엘리베이터 피치는 상황에 따라 유연하게 대처할 수 있어야 합니다.
+
+연습을 통해 면접에서 긴장을 덜하고 제 실력을 발휘하는 데 도움이 될 것입니다.
+
+---
+
+엘리베이터 피치는 간단한 자기소개입니다. 이 용어는 엘리베이터에서 마주치는 사람에게 전달할 수 있을 정도로 짧은 이야기라는 의미에서 착안되었습니다.
+
+엘리베이터 피치의 목표는 여러분이 누구인지, 무엇을 하는 사람인지, 왜 상대방이 여러분에게 관심을 두어야 하는지 설명하는 것입니다.
+
+예를 들어, 다음은 현재 과정을 위한 제 엘리베이터 피치입니다.
+
+제 이름은 롭 클리프턴입니다. 저는 Google의 프로그램 매니저입니다. 저는 Google의 모든 주니어 IT 지원 직무 채용을 관리합니다. 저는 수백 명의 후보자를 면접했고 면접관에게 업계 최고의 인재를 찾는 방법을 교육하는 데 도움을 줍니다.
+
+저는 제가 누구이고 무슨 일을 하는지, 왜 여러분이 제가 하는 말에 관심을 가질 만한지 언급했습니다.
+
+면접 상황에서는 신속하게 자신이 누구인지, 현재 어떤 직무를 맡고 있는지, 향후 목표가 무엇인지 명시해야 합니다.
+
+예를 들어, 학생이라면 어디서 무엇을 공부하는지, 졸업 후 무엇을 하고 싶은지 명확히 밝혀야 합니다.
+
+안녕하세요. 제 이름은 제이미입니다. 저는 현재 스프링필드 대학교 컴퓨터 공학과 3학년에 재학 중입니다. 저는 사람들을 돕고 문제를 해결하는 것을 즐깁니다. 그래서 졸업 후 IT 지원 전문가로 일하면서 제 기술 스킬을 실무에 적용하고 싶습니다.
+
+이미 근무 중인데 이직을 희망한다면 현재 하는 일과 희망하는 일의 차이점을 밝히는 것이 좋습니다.
+
+안녕하세요. 제 이름은 엘리스입니다. 저는 X 회사에서 지난 2년 동안 IT 지원 전문가로 일했습니다. 그동안 운영체제와 네트워킹에 관해 많은 것을 배웠기에 지금은 대규모 배치에 집중할 수 있는 시스템 관리자 직무로 전환하려고 합니다.
+
+자기소개를 명확히 함으로써 다른 사람의 관심을 끌어 그들이 여러분에 관심을 두도록 하는 것이 중요합니다. 굳이 엘리베이터에서 만나는 사람이 아니더라도 사람들에게 빠르게 여러분을 소개할 준비가 되어 있어야 합니다.
+
+---
+
+기술직 면접에서 다음과 같은 점들을 유의하세요:
+
+1. 기술 지식 및 문제 해결: 기술 개념과 문제 해결 능력을 구체적으로 증명해야 합니다. 모든 IT 기초 개념을 숙지하고, 네트워킹, 운영체제, 시스템 관리, 보안 관련 지식을 갖추어야 합니다.
+
+2. 모르는 경우의 대응: 확신이 없다고 인정하는 것은 괜찮지만, 그럴 때는 정답을 찾기 위해 어떤 접근 방식을 사용할 것인지 설명해야 합니다. 정답을 모를 때는 문제를 해결하기 위한 방법론을 보여주어야 합니다.
+
+3. 문제 해결 전략: 복잡한 질문에는 문제 해결 작업을 나누고 각 세부사항을 설명하세요. 생각을 큰 목소리로 전달하면 면접관이 여러분의 사고 과정을 이해하는 데 도움이 됩니다.
+
+4. 정보 수집 및 설명: 수집한 정보를 요약하고, 배제할 수 있는 원인과 부족한 정보를 설명하세요. 기술 개념이나 옵션을 선택하는 이유를 명확하게 설명할 수 있어야 합니다.
+
+5. 후속 질문: 문제를 정확히 규명하기 위해 면접관에게 후속 질문을 하는 것이 좋습니다. 예를 들어, 오류 메시지나 영향을 받는 다른 사용자 등을 확인할 수 있습니다.
+
+6. 문서화 및 도표 사용: 질문이 복잡할 경우 메모하거나 도표를 사용하여 문제를 설명하는 것이 유용합니다. 다만, 모든 내용을 메모할 필요는 없고, 간단한 답변은 그대로 설명하면 됩니다.
+
+연습과 준비를 통해 면접에서 자신감을 가지고 문제를 효과적으로 해결하는 방법을 보여주세요.
+
+---
+
+면접에서 좋은 모습을 보이기 위해 전날 밤과 면접 당일에 다음과 같은 준비를 해야 합니다:
+
+1. 충분한 휴식: 면접 전날 충분한 잠을 자고 벼락치기를 피하세요. 휴식은 에너지를 충전하고 불안을 줄이는 데 도움을 줍니다.
+
+2. 아침 식사: 면접 당일 아침은 충분히 드세요. 배가 고프지 않도록 하여 집중력을 높이세요.
+
+3. 일찍 도착: 면접 장소에는 예정 시간보다 일찍 도착하여 예상치 못한 상황에 대비하고 편안한 상태를 유지하세요.
+
+4. 편안한 상태 유지: 면접 전 필요한 것이 있으면 망설이지 말고 요청하세요. 화장실에 가거나 물을 마시는 것 등 편안함을 우선시하세요.
+
+5. 완전한 집중: 면접 중에는 휴대전화를 꺼두고 면접관에게 모든 주의를 기울이세요. 적극적인 경청 스킬을 발휘하고 눈을 맞추고 고개를 끄덕이며 후속 질문을 하세요.
+
+6. 자신의 개성 표현: 면접관에게 자신의 개성과 특별한 면을 보여주어 기억에 남도록 하세요.
+
+7. 질문 기회 활용: 면접은 여러분이 회사와 직무를 알아볼 기회입니다. 일하고 싶은 회사인지, 커리어 목표를 달성할 수 있는 직무인지 확인하세요.
+
+8. 여유 유지: 긴장하지 말고, 말의 속도를 조절하며 의식적으로 천천히 말하세요. 심호흡을 하여 긴장을 완화하세요.
+
+면접을 앞두고 이 팁들을 기억하고 적용하여 준비하세요.
+
+---
+
+이 강좌에서는 컴퓨터의 데이터 처리와 계산 방식, 소프트웨어 개발자들이 구축한 웹사이트와 도구의 작동 원리를 학습했습니다. 컴퓨터는 기계어 코드로 컴파일된 프로그램을 처리하며, 이 데이터는 다양한 태스크를 수행하는 데 사용됩니다. IT 지원 전문가는 이러한 복잡한 기술 문제를 해결하며, 기술 발전에 따라 더 많은 전문가가 필요합니다.
+
+현재 IT 분야는 자율 주행 자동차, 가상 현실 게임 등 신기술로 가득 차 있으며, IT 지원 전문가의 역할이 중요해지고 있습니다. 이 강좌에서 배운 것은 시작에 불과하며, 앞으로는 네트워크 설정, 운영체제 관리, 보안 유지 등 더 깊이 있는 내용을 학습하게 될 것입니다.
