[Google IT 지원 수료증 이수 과정] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/01. 기술 지원 기초.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/01. 기술 지원 기초.md
@@ -13,10 +13,10 @@
 - 자유롭게 배포, 수정 및 공유할 수 있는 소프트웨어는 **오픈소스(Open-source)**이다
 
 - 디지털 로직 : 바이너리 연습퀴즈
-  <img src="img/바이너리 연습퀴즈.jpg" alt="바이너리 연습퀴즈">
+  <img src="../../img/바이너리 연습퀴즈.jpg" alt="바이너리 연습퀴즈">
 
 - 컴퓨터 아키텍처 레이어 : 컴퓨터 아키텍처 연습퀴즈
-  <img src="img/컴퓨터 아키텍처 연습퀴즈.jpg" alt="컴퓨터 아키텍처 연습퀴즈">
+  <img src="../../img/컴퓨터 아키텍처 연습퀴즈.jpg" alt="컴퓨터 아키텍처 연습퀴즈">
 
 ### 하드웨어
 
