--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -4,6 +4,12 @@
 
 ### 네트워킹 개론
 
+이번 강좌에서는 컴퓨터 네트워킹의 기초를 다루겠습니다. 빅터 에스코베도 강사가 자신의 IT 경력과 경험을 바탕으로 네트워킹의 중요성을 설명합니다. 강사는 컴퓨터와 인간의 의사소통 유사성을 통해 네트워킹의 기본 개념을 설명하며, 프로토콜을 사용해 데이터 전송과 통신을 규정하는 방법을 설명합니다.
+
+강좌는 TCP/IP 5계층 모델과 OSI 7계층 모델을 포함해 다양한 네트워크 모델을 다룰 것입니다. 각 계층의 프로토콜이 데이터를 이동시키는 방법과 네트워크 서비스(DNS, DHCP) 및 문제 해결 도구 사용법을 배울 수 있습니다. 이 강좌를 통해 컴퓨터가 서로 통신하는 방법과 네트워크 문제를 해결하는 데 필요한 지식을 쌓을 수 있습니다.
+
+---
+
 ### 네트워크 계층
 
 ### 전송 및 애믈리케이션 계층
