--- a/08. 강의/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.md
+++ b/08. 강의/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.md
@@ -1,2 +1,15 @@
 <img src="../img/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.jpeg" alt="디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법">
 
+목표 - 구글 검색 상위 노출, 구글 디스커버 진입(디스커버가 우리 페이지의 조회수의 35%미만이면 원인 찾아보기)
+
+어떻게? - 구글 서치콘솔, 네이버 서치 어드바이저, 빙 웹마스터 도구 등록 필수
+
+검색엔진은
+
+1. 웹사이트 크롤링을 통해 콘텐츠를 발견하고
+2. 크롤링한 콘텐츠를 검색엔진 서버에 색인하며
+3. 검색 결과 페이지에 콘텐츠를 게제하는 3가지 단계를 거치게 됩니다.
+
+검색로봇이 언론사 웹사이트를 크롤링하지 못하는 경우
+
+- Robots.txt 파일에서의 차단여부 확인
