[08.강의] 내용 추가

--- a/08. 강의/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.md
+++ b/08. 강의/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.md
@@ -13,3 +13,39 @@
 검색로봇이 언론사 웹사이트를 크롤링하지 못하는 경우
 
 - Robots.txt 파일에서의 차단여부 확인
+- 서버에서 검색엔진 IP차단 확인(갑자기 조회수가 뚝 떨어졌을때 점검)
+
+---
+
+- 백링크 - 신회도가 높은 도메인의 주소가 많이 들어가있으면 좋다.
+
+---
+
+1. 구글 서치콘솔
+
+- 16시간 정도의 텀이 있음
+- 페이지경험이 중요
+- URL검사, 탐색경로, HTTPS 확인
+- 영상의 썸네일이 페이지에 없으면 색인생성에 영향을 줄 수 있음
+- 페이지속도, https, 모바일 최적화
+- 개선사항 - 구글 AMP
+
+---
+
+2. 네이버 서치어드바이저- 등록하지 않으면 검색이 잘 안될 수 있음
+
+- 설정 크롤링 통계 - 사이트에서 90일간 보관이 되기때문에 엑셀로 보관
+- 구글서치콘솔은 16개월 네이버는 90일 소유권 확인 체크(1년단위)
+- 리디렉션 사이트맵
+- 사이트진단에서 봐야할 것들은 SEO관련
+- 다운로드 소요시간이 길어지면 크롤링하는 과정에서 time out이 되기도 한다.
+- RSS- 실시간 뉴스를 네이버에세 보여주고 싶을때 - 네이버는 1개만 가능
+- 설정- 수집주기-빠르게 설정하는 것이 언론사에 좋다.
+- 사이트 간단체크 한번 해보기
+- 제휴 API 검색해보기
+
+---
+
+3. 빙 웹마스터 도구
+
+- Bing Pubhub신청- Bing 검색 후 뉴스 카테고리에 들어가는 거인가?
