[08.강의] 내용 추가

--- a/08. 강의/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.md
+++ b/08. 강의/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.md
@@ -21,31 +21,75 @@
 
 ---
 
-1. 구글 서치콘솔
+    다음 자료는 한국언론진흥재단에서 주최한 디지털뉴스 표출 활성화를 위한 검색엔진 최적화 강의 중 일부분을
+    요약한 것입니다.
 
-- 16시간 정도의 텀이 있음
-- 페이지경험이 중요
-- URL검사, 탐색경로, HTTPS 확인
+##
+
+## 1 . 웹마스터 도구사용해서 내 웹사이트 실적 확인해보기
+
+### 1) 구글서치콘솔
+
+- 구글서치콘솔은 utc7을 표준으로 삼기때문에 현지 시각과 실시간 데이터 상의 16시간 정도의 차가 있음
+- seo개선의 목표 - 구글 검색 상위 노출, 구글 디스커버 진입(디스커버가 우리 페이지의 조회수의 35%미만이면 원인 찾아보기)
+- 색인 생성은 본 페이지보다 3-4배 많은 것이 정상
+- 장기적으로 https를 채택하는게 좋음.
 - 영상의 썸네일이 페이지에 없으면 색인생성에 영향을 줄 수 있음
-- 페이지속도, https, 모바일 최적화
-- 개선사항 - 구글 AMP
+- 모바일은 반응형으로 만드는게 모바일친화적이고 사용자경험개선에 좋음
+- 글서치콘솔 직접조치는 인터넷이 아니라 사람이 직접 못보도록 조치를 했다는 것이라서 해결하는데 오래 걸릴 수 있음
 
----
+```
+색인이 생성되지 않은 것에 대한 오류 정리
+1. 적절한 표준 태그가 포함된 대체 페이지 -> 페이지 내의 원본 url을 알려주는 경우기때문에 문제없음
+2. noindex태그에 의해 제외되었습니다 -> 민감한 내용에 대해서는 noindex 처리가 되어있을 수 있다.
+3. 리디렉션이 포함된 페이지 -> 리디렉션이 됨
+4. 찾을수 없음 -> url을 하나하나 살펴봐야함. 의도한거라면 상관없음
+5. 사용자가 선택한 표준이 없는 중복페이지 -> 캐노니컬을 넣어주는게 좋음.
+6. 발견됨 -> 현재 색인이 생성되지 않음 : 잘 눈여겨봐야함. 구글이 보류하고 있다는것. 크롤링 예산 문제
+7. 중복페이지 -> 다른 표준을 선택함 : 모바일페이지로 쓰는 경우
+8. soft404 -> 구글이 들어갔는데 콘텐츠가 끊기거나 한건데 그렇게 많진 않음.
+9. 내용없이 페이지 색인이 생성됨 -> 페이지 표시 개선에서 자주 나오는데 이게 많은경우 크롤링만 하고 색인을 안하는 경우. 원인은 찾아봐야 함
+```
 
-2. 네이버 서치어드바이저- 등록하지 않으면 검색이 잘 안될 수 있음
+### 2) 네이버 서치어드바이저
 
 - 설정 크롤링 통계 - 사이트에서 90일간 보관이 되기때문에 엑셀로 보관
 - 구글서치콘솔은 16개월 네이버는 90일 소유권 확인 체크(1년단위)
 - 리디렉션 사이트맵
 - 사이트진단에서 봐야할 것들은 SEO관련
 - 다운로드 소요시간이 길어지면 크롤링하는 과정에서 time out이 되기도 한다.
-- RSS- 실시간 뉴스를 네이버에세 보여주고 싶을때 - 네이버는 1개만 가능
+- RSS 제출 - 실시간 뉴스를 네이버에세 보여주고 싶을때 - 네이버는 1개만 가능
 - 설정- 수집주기-빠르게 설정하는 것이 언론사에 좋다.
 - 사이트 간단체크 한번 해보기
 - 제휴 API 검색해보기
 
----
+### 3) 빙 웹마스터 도구
 
-3. 빙 웹마스터 도구
+- 마크업 : 구조화된 데이터 - 이 사이트가 뉴스사이트 라는 것을 사이트에게 알려주는 신뢰도
+- 사이트 탐색기 - 좀 더 정확하게 문제 확인 가능
+- 사이트 맵 - 구글에 넣어 두었다면 그대로 가져옴.
+- indexnow - 사이트에 URL 이 생성되는 순간 구글이나 네이버에 실시간으로 알리는 역할, 자동으로 올리는 프로그램 개발 필요함
+- 백링크 - 비교할 사이트를 추가하면 그 사이트에 대한 백링크 현황 알려줌
+- 키워드 조사 - 해당 키워드가 빙에서 얼마나 검색되는지 - 빙은 점유율이 낮기때문에 굳이 볼 필요는 x
+- 주요 insight - SEO 관점에서 대략적으로 심각도로 나누어 웹페이지 문제 진단 가능. 직접 경험해본 결과 웹페이지 오류를 고친 뒤 1-2주 정도 경과 후 반영 됨. 주로 수요일에 많이 업데이트 되는 듯
+- 사이트 검사 - 1000개 할당량으로 사이트 문제 정밀 진단 가능함. 2일정도 걸림
+- 구성 : 크롤링제어 - 뉴스가 많이 나오는 주요시간대 크롤링 설정 수동으로 가능
+- 저작권 제거 통지 - 저작권 신고를 받으면 해당 URL 차단됨.
+- 사용자관리 - 관리자 추가 가능
+- 마이크로소프트 선명도 - 사용자가 나의 사이트에 활동하는 상황 파악 가능 - 코드를 사이트 헤더에 넣어야 한다. 어떤 메뉴에 대한 클릭률을 보여준다.
 
-- Bing Pubhub신청- Bing 검색 후 뉴스 카테고리에 들어가는 거인가?
+## 2 . 토막 SEO 상식
+
+### 1) 내 기사가 구글에 색인됐는지 확인하고 싶다면?
+
+- 구글에서 내 기사 url을 검색해본다
+
+- 내 사이트를 구글 뉴스의 2시간 이내로 검색해본다
+
+- 구글 서치콘솔 관리자 페이지에서 전체적인 색인 현황을 파악해본다
+
+### 2) 표준 URL 의 정의와 중요성
+
+- 중복되거나 비슷한 url 이 있을때는 하나의 url을 선택해 이것이 정본이라는 뜻을 알려줘야 한다
+
+- 공식적인 랭킹 요소는 아니지만 제대로 구현해준다면 더 기사를 빠르게 찾을 수 있도록 도와준다
