--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -10,6 +10,160 @@
 
 ---
 
+#### TCP/IP 5계층 네트워크 모델
+
+1. 물리적 계층: 컴퓨터를 연결하는 물리적 기기와 케이블, 커넥터, 신호 전송 방식 등을 정의합니다.
+2. 데이터 링크 계층: 물리적 계층에서 전송된 신호를 해석하여 네트워크 기기 간의 통신을 가능하게 하는 프로토콜을 정의합니다. 이더넷이 대표적인 예입니다.
+3. 네트워크 계층: 여러 네트워크 간 데이터 전송을 담당하며, 라우터를 통해 인터넷과 같은 넓은 네트워크를 형성합니다. IP 프로토콜이 주요 역할을 합니다.
+4. 전송 계층: 데이터가 올바른 애플리케이션에 도달하도록 도와주는 계층입니다. TCP와 UDP 프로토콜이 사용됩니다. TCP는 데이터의 안정적 전송을 보장하지만, UDP는 그렇지 않습니다.
+5. 애플리케이션 계층: 웹 탐색, 이메일 송수신 등 애플리케이션별 프로토콜이 포함되어 있으며, 사용자가 직접 상호작용하는 계층입니다.HTTP, SMTP, FTP 등이 있습니다.
+
+---
+
+#### 네트워킹 기기의 시초
+
+1. 구리 케이블 (Copper Cables):
+
+- 종류: Cat 5, Cat 5e, Cat 6
+- 특징:
+  - Cat 5: 오래된 표준으로 현재는 대부분 Cat 5e와 Cat 6으로 대체됨.
+  - Cat 5e: 신호의 크로스토크를 줄여 데이터 전송 오류를 감소시킴.
+  - Cat 6: 더 빠르고 안정적이며, 높은 속도에서 전송 거리 짧음.
+- 동작 방식: 전압 변화를 통해 바이너리 데이터를 전송.
+
+2. 파이버 케이블 (Fiber Optic Cables):
+
+- 구성: 유리로 만든 광섬유를 사용.
+- 동작 방식: 빛의 펄스를 사용하여 데이터를 전송.
+- 장점: 전자기 간섭에 강하고 긴 거리 전송 가능.
+- 단점: 비쌈, 깨지기 쉬움.
+- 용도: 주로 데이터 센터에서 사용됨.
+
+이러한 케이블의 종류와 특성을 이해하면 네트워킹 기기 간의 데이터 전송과 문제 해결에 유용합니다.
+
+---
+
+**허브 (Hub)**:
+
+- 기능: 네트워크의 물리적 계층 기기로, 연결된 모든 기기가 동시에 통신하도록 지원합니다.
+- 단점: 데이터 충돌이 자주 발생하여 네트워크 속도가 느려지고, 충돌 도메인이 생성되어 효율성이 떨어집니다.
+- 현황: 현재는 거의 사용되지 않음.
+
+**스위치 (Switch)**:
+
+- 기능: 데이터 링크 계층 기기로, 네트워크를 통해 전송되는 데이터의 내용을 검사하고, 특정 데이터가 올바른 시스템으로 전송되도록 합니다.
+- 장점: 충돌 도메인을 줄이거나 완전히 제거하고, 재전송을 줄여 전체 처리량을 증가시킵니다.
+- 현황: 허브보다 효율적이며, 더 널리 사용됩니다.
+
+---
+
+**라우터**:
+
+- 기능: 독립적인 네트워크 간에 데이터를 전달하며, 네트워크 계층(계층 3)에서 작동합니다.
+
+- 작동 방식: IP 데이터를 검사하여 올바른 전송 위치를 결정합니다. 내부에 라우팅 테이블을 저장하여 다양한 네트워크 간의 트래픽을 라우팅하는 방법에 대한 정보를 관리합니다.
+
+- 종류:
+
+  - 홈 및 소규모 사무실 라우터: 기본적인 라우팅 기능을 제공하며, 주로 LAN 내의 트래픽을 ISP(인터넷 서비스 공급자)로 전달합니다.
+  - 코어 라우터: 인터넷의 백본을 형성하며, 대량의 트래픽을 처리하고 복잡한 라우팅 과정을 수행합니다. 여러 라우터와 연결되어 있으며, BGP(경계 게이트웨이 프로토콜)를 통해 최적의 트래픽 경로를 학습합니다.
+
+- 중요성: 라우터는 전 세계의 네트워크 간에 데이터를 전달하고, 인터넷의 복잡한 트래픽을 관리하여 웹페이지 로드와 같은 작업을 가능하게 합니다.
+
+---
+
+**서버와 클라이언트**:
+
+- 서버: 데이터를 제공하는 기기 또는 프로그램. 서버는 클라이언트의 요청에 응답하여 데이터를 제공합니다.
+- 클라이언트: 데이터를 요청하는 기기 또는 프로그램. 클라이언트는 서버로부터 데이터를 수신합니다.
+
+노드의 역할:
+
+- 노드: 네트워크에 연결된 모든 기기나 프로그램을 의미합니다.
+- 서버와 클라이언트: 같은 노드가 서버와 클라이언트 역할을 동시에 할 수 있으며, 네트워크에서는 특정 노드의 주요 용도에 따라 서버나 클라이언트로 분류됩니다.
+- 예시: 이메일 서버는 DNS 서버의 클라이언트일 수 있으며, 데스크톱 컴퓨터는 데이터를 제공할 때 서버 역할을 하면서 다른 서버에서 데이터를 가져올 때 클라이언트 역할을 합니다.
+  서버와 클라이언트의 개념은 네트워크에서 각 노드의 주요 용도와 관계가 있으며, 대부분의 네트워크 노드는 주로 서버나 클라이언트 중 하나로 작동합니다.
+
+---
+
+#### 물리적 계층
+
+- 물리적 계층: 네트워크의 물리적 계층은 비트(1과 0)를 실제로 전송하는 기기와 방법으로 구성됩니다.
+- 비트 전송: 비트는 네트워크를 통해 전송되는 데이터의 가장 기본적인 단위입니다. 물리적 계층에서는 이 비트를 네트워크 케이블을 통해 이동시킵니다.
+- 변조: 데이터는 변조를 통해 네트워크 케이블을 통해 전송됩니다. 변조는 전하의 전압을 변경하여 1과 0을 표현하는 방법입니다. 이를 라인 코딩이라고도 합니다.
+- 속도: 현대 네트워크는 단일 케이블을 통해 1초에 100억 개의 비트를 전송할 수 있습니다.
+- 중요성: 물리적 계층은 네트워크 통신의 기초를 제공하며, IT 지원 전문가가 네트워크 문제를 해결하거나 새 네트워크를 설정할 때 이해해야 할 핵심 요소입니다.
+
+---
+
+- 연선 케이블 (Twisted Pair): 구리선 쌍이 꼬여있는 케이블로, 전자기 간섭과 크로스토크를 줄여줍니다.
+- Cat 6 케이블: 단일 피복 안에 4개의 꼬인 쌍선, 총 8개의 전선이 포함되어 있습니다.
+- 이중 통신 (Duplex Communication): 케이블을 통해 양방향으로 데이터가 흐를 수 있는 방식입니다.
+  - 전이중 (Full Duplex): 데이터가 동시에 양 방향으로 흐를 수 있습니다.
+  - 반이중 (Half Duplex): 각 방향으로 통신할 수 있지만 한 번에 하나의 방향으로만 통신이 가능합니다.
+- 단방향 통신 (Simplex Communication): 데이터가 한 방향으로만 흐르는 방식입니다.
+
+전이중 통신은 케이블의 여러 쌍선을 사용해 동시에 양방향 통신을 가능하게 합니다. 반이중 통신은 한 번에 한 방향으로만 통신할 수 있습니다.
+
+---
+
+연선을 통한 이더넷 기술이란 연선(twisted pair) 케이블을 통해 전송할 수 있는 데이터의 양, 데이터 전송 속도, 데이터 품질 저하가 일어나지 않는 네트워크 케이블 길이를 결정하는 통신 프로토콜입니다.
+
+---
+
+- RJ45 플러그: 연선 네트워크 케이블의 끝에 위치하며, 네트워크 포트에 연결됩니다. 이는 컴퓨터 네트워킹에서 가장 일반적인 플러그 사양입니다.
+- 네트워크 포트: 기기(스위치, 서버, 데스크톱 등)에 직접 연결되며, 보통 링크 LED와 활동 LED가 있어 네트워크 연결 상태와 데이터 전송 여부를 나타냅니다.
+  - 링크 LED: 케이블이 제대로 연결되고 전원이 켜졌을 때 켜집니다.
+  - 활동 LED: 데이터 전송이 활발할 때 깜박입니다.
+- 패치 패널: 많은 네트워크 포트를 포함하는 장비로, 여러 케이블을 연결하는 엔드포인트 역할을 합니다. 패치 패널의 케이블은 스위치나 라우터에 연결되어 네트워크를 통해 데이터를 전송합니다.
+- 추가 정보: 스위치에서는 링크 속도 등의 추가 정보를 나타낼 수 있는 LED도 있습니다.
+
+#### 데이터 링크 계층
+
+무선 및 셀룰러 인터넷은 오늘날 네트워크 연결의 일반적인 방법으로 빠르게 성장하고 있으며, 여전히 유선 네트워크는 직장과 데이터 센터에서 널리 사용됩니다. 이더넷은 데이터를 전송하는 데 가장 널리 사용되는 프로토콜로, 데이터 링크 계층에서 작동하며, 상위 계층이 물리적 계층과 하드웨어를 신경 쓰지 않고 일관되게 작동할 수 있게 합니다.
+
+이더넷의 주요 구성 요소는 다음과 같습니다:
+
+1. MAC 주소: 네트워크 인터페이스를 고유하게 식별하는 48비트 주소로, 16진수 숫자 2개로 구성된 6개 그룹으로 표현됩니다. MAC 주소의 첫 3개 옥텟은 OUI(조직 고유 식별자)로, 제조업체에 할당됩니다. 나머지 3개 옥텟은 제조업체가 고유하게 할당하는 부분입니다.
+
+2. 이더넷 프레임: 데이터를 전송하는데 사용되며, 데이터의 출발지와 목적지를 MAC 주소로 식별합니다. 이를 통해 충돌 도메인 내에서 데이터가 올바른 위치로 전달됩니다.
+
+3. CSMA/CD (반송파 감지 다중 접속 및 충돌 감지): 네트워크의 충돌을 관리하는 기술로, 네트워크 세그먼트가 깨끗한 시기에 데이터를 전송하고, 충돌이 감지되면 재전송을 시도합니다.
+
+이더넷은 1980년에 처음 등장했으며, 현재의 표준은 과거의 기술과 비슷하지만 대역폭 요구를 지원하기 위해 몇 차례 발전했습니다. 이더넷의 기본 원리와 MAC 주소 시스템을 이해하면 IT 지원 전문가로서 네트워크 문제를 효과적으로 해결할 수 있습니다.
+
+---
+
+네트워크에서 데이터 전송 방식에는 세 가지 주요 유형이 있습니다:
+
+- 유니캐스트 (Unicast): 데이터가 하나의 특정 수신자에게만 전송됩니다. 이더넷에서 대상 MAC 주소의 첫 번째 옥텟의 최하위 비트가 0으로 설정되면 유니캐스트로 간주됩니다. 데이터는 충돌 도메인의 모든 기기로 전송되지만 실제로는 특정 수신자만이 수신하고 처리합니다.
+
+- 멀티캐스트 (Multicast): 데이터가 여러 특정 수신자에게 전송됩니다. 이더넷에서 대상 MAC 주소의 첫 번째 옥텟의 최하위 비트가 1로 설정되면 멀티캐스트로 간주됩니다. 멀티캐스트 프레임은 로컬 네트워크의 모든 기기로 전달되지만, 각 기기는 자신의 멀티캐스트 주소 목록에 따라 데이터를 수락하거나 거부합니다.
+
+- 브로드캐스트 (Broadcast): 데이터가 LAN의 모든 기기로 전송됩니다. 이더넷 브로드캐스트는 모든 비트가 '1'인 브로드캐스트 주소를 사용하여 수행됩니다. 브로드캐스트 전송은 네트워크의 모든 기기가 데이터를 수신하게 합니다.
+
+이러한 전송 유형은 네트워크에서 데이터의 도달 범위를 조절하며, 이더넷 프레임을 분석하는 데 중요한 역할을 합니다.
+
+---
+
+이더넷 프레임 분석은 네트워킹 기초를 이해하는 중요한 부분입니다. 이더넷 프레임은 네트워크 링크를 통해 전송되는 데이터의 구조화된 단위입니다. 프레임은 다음과 같은 주요 구성 요소로 이루어져 있습니다:
+
+1. 프리앰블 (Preamble): 8바이트 길이의 시퀀스이며, 네트워크 인터페이스의 동기화와 데이터 전송 속도 조절을 돕습니다. 마지막 바이트는 시작 프레임 구분 기호(SFD)로, 실제 프레임 콘텐츠의 시작을 알립니다.
+
+2. 대상 MAC 주소 (Destination MAC Address): 데이터의 수신자 하드웨어 주소입니다.
+
+3. 소스 MAC 주소 (Source MAC Address): 데이터의 발신자 하드웨어 주소입니다.
+
+4. EtherType 필드: 16비트 길이로, 프레임의 데이터 페이로드가 사용하는 프로토콜을 설명합니다. VLAN 헤더가 있는 경우, EtherType 필드 뒤에 위치합니다.
+
+5. VLAN 헤더 (Optional): 가상 LAN(VLAN)을 나타내며, VLAN 태그가 있는 프레임은 해당 VLAN에서만 전송됩니다.
+
+6. 데이터 페이로드 (Payload): 전송되는 실제 데이터로, IP, 전송, 애플리케이션 계층에서 사용하는 데이터가 포함됩니다. 길이는 46~1500바이트입니다.
+
+7. 프레임 검사 시퀀스 (FCS): 4바이트 길이의 체크섬 값으로, 순환 중복 검사(CRC)를 사용해 데이터의 무결성을 검증합니다. 수신 측에서 CRC를 다시 계산해 일치하지 않으면 데이터를 버립니다.
+
+이더넷 프레임을 통해 데이터가 올바르게 전송되었는지 확인하고, 손상된 데이터는 상위 계층에서 재전송을 요청하게 됩니다. 이러한 과정을 통해 네트워크의 데이터 무결성을 유지하고, 네트워킹 문제를 해결하는 데 도움을 줍니다.
+
 ### 네트워크 계층
 
 ### 전송 및 애믈리케이션 계층
