[08.강의] 내용 추가

--- a/08. 강의/한국언론진흥재단/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.md
+++ b/08. 강의/한국언론진흥재단/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.md
@@ -1,4 +1,6 @@
-<img src="../img/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.jpeg" alt="디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법">
+# 디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법 - 24.08.22
+
+<img src="../../img/디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.jpeg" alt="디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법">
 
 목표 - 구글 검색 상위 노출, 구글 디스커버 진입(디스커버가 우리 페이지의 조회수의 35%미만이면 원인 찾아보기)
 
