--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -166,6 +166,225 @@
 
 ### 네트워크 계층
 
+다음 강의에서는 장거리 통신을 위한 네트워크 기술을 집중적으로 다루게 됩니다. 이 강의에서는 다음 주제들을 다룰 예정입니다:
+
+1. IP 주소 지정 체계와 서브넷팅
+
+   - IP 주소 지정: IP 주소의 구조와 할당 방법을 설명합니다.
+   - 서브넷팅: 서브넷을 정의하고, 이진 연산을 사용하여 서브넷을 계산하는 방법을 배웁니다.
+
+2. 캡슐화 및 프로토콜
+
+   - 캡슐화: 데이터가 네트워크를 통해 전송되기 위해 어떻게 캡슐화되는지 이해합니다.
+   - ARP (주소 결정 프로토콜): ARP가 네트워크 계층에서 IP 주소를 MAC 주소로 변환하는 방법을 배웁니다.
+
+3. 라우팅 및 라우팅 프로토콜
+
+   - 라우팅: 데이터가 네트워크를 통해 목적지까지 전달되는 경로를 설정하는 방법을 이해합니다.
+   - 라우팅 프로토콜: 다양한 라우팅 프로토콜의 기본 작동 원리와 역할을 배웁니다.
+
+4. 인터넷의 작동 원리
+
+   - 인터넷 작동 원리: 인터넷이 어떻게 작동하며, 데이터가 어떻게 전 세계적으로 전송되는지를 설명합니다.
+
+이 강의가 끝나면, 네트워크의 기본부터 장거리 통신까지의 모든 과정을 명확하게 이해할 수 있을 것입니다.
+
+#### 네트워크 계층
+
+LAN에서는 노드가 MAC 주소를 통해 통신하지만, 이 방법은 장거리 통신에 적합하지 않습니다. MAC 주소는 지구상의 모든 네트워크 인터페이스에 고유하지만, 체계적으로 정렬되어 있지 않아 장거리 통신에서는 특정 MAC 주소가 위치한 곳을 추적하기 어렵습니다. 이러한 한계로 인해 IP 주소와 같은 네트워크 계층의 해결책이 필요합니다.
+
+이 강의에서는 다음을 배울 수 있습니다:
+
+- IP 주소 식별: IP 주소의 구조와 식별 방법.
+- IP 데이터그램 캡슐화: IP 데이터그램이 이더넷 프레임의 페이로드로 캡슐화되는 방식.
+- IP 데이터그램 헤더 분석: IP 데이터그램 헤더의 필드 및 기능 설명.
+  이 강의를 통해 IP 주소와 데이터그램의 역할을 이해하고, 네트워크 통신의 기초를 다질 수 있습니다.
+
+---
+
+IP 주소는 32비트 숫자로, 4개의 8비트 옥텟으로 구성됩니다. 각 옥텟은 0에서 255 사이의 십진수로 표현됩니다. 예를 들어, 12.30.56.78은 유효한 IP 주소이지만, 123.456.789.100은 유효하지 않습니다.
+
+**IP 주소의 주요 포인트**:
+
+1. 계층적 배포: IP 주소는 물리적 주소와 달리 계층적으로 배포되며, 특정 조직이나 회사에 의해 대량으로 관리됩니다. 예를 들어, IBM은 첫 번째 옥텟이 9인 IP 주소를 소유하고 있습니다.
+
+2. 동적 vs. 고정 IP 주소:
+   - 동적 IP 주소: DHCP를 통해 자동으로 할당됩니다. 네트워크에 새 기기가 연결되면 IP 주소가 자동으로 배포됩니다.
+   - 고정 IP 주소: 수동으로 설정되며, 주로 서버 및 네트워크 장비에 사용됩니다.
+3. 주소 할당: IP 주소는 네트워크의 일부로서, 물리적 기기와는 달리 위치에 따라 다를 수 있습니다. 예를 들어, 노트북은 집과 카페에서 다른 IP 주소를 받을 수 있습니다.
+
+---
+
+IP 데이터그램은 네트워크 계층에서 사용하는 데이터 패킷으로, 다음과 같은 주요 구성 요소로 나뉩니다:
+
+1. 헤더: IP 데이터그램의 구조를 정의하는 부분으로, 다양한 필드를 포함합니다.
+
+   - 버전 (4비트): 사용하는 IP 프로토콜의 버전을 나타냅니다 (예: IPv4).
+   - 헤더 길이 (4비트): IP 헤더의 길이를 나타냅니다.
+   - 서비스 유형 (8비트): 서비스 품질(QoS) 관련 정보를 제공합니다.
+   - 총 길이 (16비트): IP 데이터그램의 전체 길이를 나타냅니다.
+   - 식별 (16비트): 데이터그램을 식별하는 번호로, 조각화된 데이터그램의 그룹화를 돕습니다.
+   - 플래그: 데이터그램의 조각화 가능 여부를 표시합니다.
+   - 조각화 오프셋: 조각화된 패킷의 순서를 정하는 데 사용됩니다.
+   - TTL (Time to Live) (8비트): 데이터그램이 허용된 최대 라우터 홉 수를 나타냅니다.
+   - 프로토콜 (8비트): 전송 계층 프로토콜 (예: TCP, UDP)을 나타냅니다.
+   - 헤더 체크섬 (16비트): IP 헤더의 오류 검출을 위한 체크섬입니다.
+   - 소스 IP 주소 (32비트) 및 대상 IP 주소 (32비트): 데이터그램의 출발지와 도착지를 나타냅니다.
+   - IP 옵션 (선택적): 데이터그램의 특성을 설정하는 데 사용됩니다.
+   - 패딩: 헤더의 총 길이를 올바르게 맞추기 위해 사용됩니다.
+
+2. 페이로드: IP 데이터그램의 실제 데이터가 포함된 부분으로, 이더넷 프레임의 페이로드로 캡슐화됩니다. IP 데이터그램의 페이로드에는 상위 계층의 TCP 또는 UDP 패킷이 포함됩니다.
+
+요약하자면, IP 데이터그램은 네트워크 계층에서 데이터를 전송하는 기본 단위로, 헤더와 페이로드로 구성되며, 헤더는 데이터그램의 전송과 관리에 필요한 다양한 정보를 담고 있습니다. IP 데이터그램은 이더넷 프레임의 페이로드로 캡슐화되어 네트워크를 통해 전달됩니다.
+
+---
+
+IP 주소는 네트워크 ID와 호스트 ID로 나눌 수 있습니다. IP 주소의 클래스 시스템은 글로벌 IP 주소 공간의 분할 방식을 정의하며, 기본적으로 세 가지 주요 클래스가 있습니다:
+
+1. 클래스 A:
+
+   - 네트워크 ID: 첫 번째 옥텟 (8비트)
+   - 호스트 ID: 나머지 세 옥텟 (24비트)
+   - IP 주소 범위: 0.0.0.0부터 127.255.255.255까지
+   - 호스트 주소 수: 약 16,777,216개
+
+2. 클래스 B:
+
+   - 네트워크 ID: 첫 번째와 두 번째 옥텟 (16비트)
+   - 호스트 ID: 나머지 두 옥텟 (16비트)
+   - IP 주소 범위: 128.0.0.0부터 191.255.255.255까지
+   - 호스트 주소 수: 약 65,536개
+
+3. 클래스 C:
+
+   - 네트워크 ID: 첫 번째, 두 번째, 세 번째 옥텟 (24비트)
+   - 호스트 ID: 마지막 옥텟 (8비트)
+   - IP 주소 범위: 192.0.0.0부터 223.255.255.255까지
+   - 호스트 주소 수: 256개
+
+4. 클래스 D: 멀티캐스팅에 사용되며, IP 주소의 첫 번째 비트가 1110으로 시작합니다. 범위는 224.0.0.0부터 239.255.255.255까지입니다.
+
+5. 클래스 E: 테스트 및 연구 목적으로 예약된 주소로, 실제로는 사용되지 않습니다. 범위는 240.0.0.0부터 255.255.255.255까지입니다.
+
+각 클래스는 주소의 첫 번째 비트로 구분되며, 클래스 A는 첫 비트가 0, 클래스 B는 10, 클래스 C는 110으로 시작합니다. 이러한 주소 클래스 시스템은 CIDR(클래스 없는 도메인 간 라우팅)으로 대체되고 있지만, 여전히 교육 및 일부 네트워크 구성에서 사용됩니다. CIDR은 이후 강의에서 다룰 예정입니다.
+
+---
+
+ARP(주소 확인 프로토콜)는 IP 주소와 MAC 주소를 연결하는 데 사용됩니다. 이 프로토콜은 다음과 같이 작동합니다:
+
+1.  IP 주소와 MAC 주소의 연결:
+
+    - IP 데이터그램이 이더넷 프레임으로 캡슐화되기 위해서는 대상 MAC 주소가 필요합니다.
+    - 네트워크 기기는 로컬 ARP 테이블을 유지하며, 이 테이블에는 IP 주소와 해당 MAC 주소가 매핑되어 있습니다.
+
+2.  ARP 요청:
+
+    - 만약 IP 주소에 대한 MAC 주소가 ARP 테이블에 없다면, 노드는 브로드캐스트 ARP 요청을 전송합니다.
+    - ARP 요청은 로컬 네트워크의 모든 장치로 전송되며, "Who has IP 주소 X.X.X.X?"라는 메시지를 포함합니다.
+
+3.  ARP 응답:
+
+    - 해당 IP 주소를 가진 장치가 ARP 요청을 수신하면, 자신이 가진 MAC 주소를 포함한 ARP 응답을 보냅니다.
+    - 응답을 받은 노드는 이 MAC 주소를 사용하여 이더넷 프레임의 대상 MAC 주소를 설정합니다.
+
+4.  ARP 테이블 업데이트:
+
+    - 받은 MAC 주소를 로컬 ARP 테이블에 저장하여, 다음에 동일한 IP 주소와 통신할 때 브로드캐스트 ARP 요청을 반복하지 않도록 합니다.
+    - ARP 테이블 항목은 보통 짧은 시간 후에 만료됩니다.
+
+이 프로세스를 통해 네트워크 상에서 IP 주소를 MAC 주소로 변환할 수 있습니다.
+
+---
+
+IP 데이터그램의 TTL(Time to Live) 필드는 라우터에 도달할 때마다 하나씩 감소합니다.
+
+TTL 필드는 데이터그램이 네트워크를 통해 이동할 수 있는 최대 홉 수를 제한하여 무한 루프를 방지하는 역할을 합니다. 데이터그램이 각 라우터를 통과할 때마다 TTL 값이 1씩 줄어들며, TTL 값이 0에 도달하면 데이터그램은 폐기됩니다.
+
+---
+
+#### 서브넷팅
+
+서브넷팅은 대규모 네트워크를 더 작은 서브네트워크(서브넷)으로 나누는 과정입니다. 이를 통해 네트워크를 관리하기 쉽게 만들고, 성능과 보안을 향상시킬 수 있습니다.
+
+기본적으로 IP 주소는 네트워크 ID와 호스트 ID로 나뉩니다. 예를 들어, IP 주소 9.100.100.100은 클래스 A 네트워크에 속하며, 이 네트워크는 16,777,216개의 호스트를 지원합니다. 하지만 너무 많은 호스트가 단일 네트워크에 연결되는 것은 비효율적입니다.
+
+서브넷팅을 사용하면 큰 네트워크를 여러 개의 작은 네트워크로 나누어 각 서브넷이 고유의 게이트웨이 라우터를 갖게 할 수 있습니다. 이를 통해 각 서브넷이 독립적으로 관리되고, 더 효율적인 데이터 전송과 관리가 가능합니다.
+
+또한, 서브넷 마스크를 사용하여 네트워크와 호스트 ID를 확장할 수 있으며, CIDR(Classless Inter-Domain Routing)와 같은 기술을 통해 유연한 서브넷팅이 가능합니다.
+
+---
+
+서브넷팅은 대규모 네트워크를 더 작은 서브네트워크(서브넷)으로 나누는 과정입니다. 이를 통해 네트워크를 효율적으로 관리하고, 각 서브넷에 개별 게이트웨이 라우터를 지정할 수 있습니다.
+
+- 서브넷 ID는 서브넷 마스크를 통해 계산됩니다. 서브넷 마스크는 32비트 숫자로, 1로만 이루어진 부분은 서브넷 ID를 정의하고, 0으로만 이루어진 부분은 호스트 ID를 정의합니다.
+- 예를 들어, 서브넷 마스크 255.255.255.0은 24개의 1과 8개의 0으로 구성됩니다. 이 경우, 마지막 옥텟(8비트)이 호스트 ID로 사용되며, 0부터 255까지의 256개 주소 중 0과 255는 특별한 용도로 예약되어 있으므로 실제로는 1부터 254까지의 주소를 사용할 수 있습니다.
+- 다른 예로, 서브넷 마스크 255.255.255.224는 27개의 1과 5개의 0으로 변환되며, 이 경우 5비트의 호스트 ID 공간을 제공하여 총 32개의 주소를 지원합니다. 이를 더 간단히 표현하면 /27로 표기할 수 있습니다.
+
+서브넷팅의 이해를 돕기 위해 이진 연산에 대한 기본적인 지식이 필요하며, 서브넷 마스크와 IP 주소의 관계를 잘 이해하는 것이 중요합니다.
+
+---
+
+이진수와 십진수는 숫자를 표현하는 방식이 다를 뿐 본질적인 연산은 같습니다. 숫자의 기수(진법)만 다를 뿐, 숫자는 보편적입니다.
+
+1. 진법의 차이:
+
+- 십진수는 0부터 9까지의 10개의 숫자를 사용하며, 기수 10입니다.
+- 이진수는 0과 1 두 개의 숫자만 사용하며, 기수 2입니다.
+
+2. 숫자 세기:
+
+- 십진수에서 숫자를 하나씩 올리며 새로운 자릿수를 추가합니다 (예: 9 다음은 10).
+- 이진수도 비슷하게 작동하며, 1이 넘어가면 새로운 자릿수를 추가합니다 (예: 1 다음은 10, 11).
+
+3. 비트와 숫자 범위:
+
+- 특정 비트 수로 나타낼 수 있는 숫자의 개수는 2^n입니다. 예를 들어, 8비트는 256개의 값을, 4비트는 16개의 값을, 16비트는 65,536개의 값을 가집니다.
+
+4. 진법 변환:
+
+- 십진수는 기수 10으로, 이진수는 기수 2로 표현됩니다. 자릿수 수에 따라 기수^자릿수로 숫자의 개수를 계산할 수 있습니다. 예를 들어, 두 자리 십진수는 10^2 = 100개의 값을, 두 자리 이진수는 2^2 = 4개의 값을 가집니다.
+
+5. 이진수 연산:
+
+- 덧셈: 이진수 덧셈은 4가지 경우만 있어 간단합니다. 예를 들어, 1 + 1은 자리올림이 발생하여 10이 됩니다.
+- 논리 연산자:
+  - OR 연산: 하나라도 참이면 결과가 참입니다 (예: 1 OR 0 = 1).
+  - AND 연산: 둘 다 참일 때만 결과가 참입니다 (예: 1 AND 1 = 1).
+
+6. 서브넷 마스크와 이진 연산:
+
+- 서브넷 마스크는 IP 주소와 AND 연산을 통해 네트워크와 호스트를 구분하는 데 사용됩니다.
+- 예를 들어, IP 주소 9.100.100.100과 서브넷 마스크 255.255.255.0의 이진 AND 연산을 통해
+  네트워크 ID와 서브넷 ID를 추출할 수 있습니다.
+
+이진 연산과 서브넷 마스크를 이해하는 것은 네트워크의 구조를 이해하고 관리하는 데 중요합니다.
+
+---
+
+주소 클래스와 서브넷팅은 IP 주소 공간을 효율적으로 관리하기 위한 첫 시도였지만, 인터넷의 급격한 성장과 네트워크의 필요에 맞지 않게 되었습니다. 이를 해결하기 위해 CIDR(클래스 없는 도메인 간 라우팅)이 도입되었습니다.
+
+1. 주소 클래스의 한계:
+
+- 클래스 A, B, C: 각각 8비트, 16비트, 24비트 네트워크 ID를 사용합니다.
+  - 클래스 C는 최대 254개의 호스트를 지원하지만, 소규모 네트워크에는 적합하고 대규모 네트워크에는 비효율적입니다.
+  - 클래스 B는 65,534개의 호스트를 지원하지만, 너무 많은 호스트를 지원해 불필요한 낭비가 발생합니다.
+- 많은 회사가 클래스 C 네트워크를 여러 개 사용하여 라우팅 테이블이 복잡해졌습니다.
+
+2. CIDR의 도입:
+
+- CIDR(Classless Inter-Domain Routing)는 주소 클래스 개념을 버리고 네트워크와 호스트 ID를 조합하여 더 유연한 주소 할당을 가능하게 합니다.
+- 슬래시 표기법: IP 주소와 넷 마스크를 결합하여 주소를 정의합니다. 예를 들어, 9.100.100.100/24는 네트워크 ID와 서브넷 ID를 결합하여 사용합니다.
+
+3. CIDR의 장점:
+
+- 유연한 네트워크 크기: 고정된 크기의 네트워크 대신, 다양한 크기의 네트워크를 지원합니다.
+- 효율적인 라우팅: 네트워크를 연속 청크로 결합하여 라우터가 단일 항목만 인식하면 되므로 라우팅 테이블이 간소화됩니다.
+- 호스트 수의 조정: /24 네트워크는 256개의 잠재적 호스트 중 254개를 사용하고, /23 네트워크는 512개의 잠재적 호스트 중 510개를 사용합니다.
+
+CIDR는 주소 공간의 낭비를 줄이고, 네트워크 관리를 단순화하며, 라우팅 효율성을 높이는 데 도움을 줍니다.
+
+#### 라우팅
+
 ### 전송 및 애믈리케이션 계층
 
 ### 네트워킹 서비스
