[08.강의] 내용 추가

--- a/08. 강의/한국언론진흥재단/24.08.22_디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.md
+++ b/08. 강의/한국언론진흥재단/24.08.22_디지털뉴스 표출 활성화를 위한 검색엔진 최적화 방법.md
@@ -80,6 +80,22 @@
 - 사용자관리 - 관리자 추가 가능
 - 마이크로소프트 선명도 - 사용자가 나의 사이트에 활동하는 상황 파악 가능 - 코드를 사이트 헤더에 넣어야 한다. 어떤 메뉴에 대한 클릭률을 보여준다.
 
+---
+
+- 빙에 뉴스 제휴(cp사 등록)을 맺으려면 **패스트뷰**라는 회사에 문의해서 등록 할 수 있다.
+- 브랜드 심사 과정에서 아래 채널 정보가 필요하다.
+
+  1. 채널명
+  2. 채널 설명
+
+     - 1~2문장의 간략한 문구.
+
+  3. 로고 이미지 (png)
+
+     - 552×160
+     - 200x200
+     - 96x96
+
 ## 2 . 토막 SEO 상식
 
 ### 1) 내 기사가 구글에 색인됐는지 확인하고 싶다면?
