--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -328,34 +328,34 @@ TTL 필드는 데이터그램이 네트워크를 통해 이동할 수 있는 최
 
 1. 진법의 차이:
 
-- 십진수는 0부터 9까지의 10개의 숫자를 사용하며, 기수 10입니다.
-- 이진수는 0과 1 두 개의 숫자만 사용하며, 기수 2입니다.
+   - 십진수는 0부터 9까지의 10개의 숫자를 사용하며, 기수 10입니다.
+   - 이진수는 0과 1 두 개의 숫자만 사용하며, 기수 2입니다.
 
 2. 숫자 세기:
 
-- 십진수에서 숫자를 하나씩 올리며 새로운 자릿수를 추가합니다 (예: 9 다음은 10).
-- 이진수도 비슷하게 작동하며, 1이 넘어가면 새로운 자릿수를 추가합니다 (예: 1 다음은 10, 11).
+   - 십진수에서 숫자를 하나씩 올리며 새로운 자릿수를 추가합니다 (예: 9 다음은 10).
+   - 이진수도 비슷하게 작동하며, 1이 넘어가면 새로운 자릿수를 추가합니다 (예: 1 다음은 10, 11).
 
 3. 비트와 숫자 범위:
 
-- 특정 비트 수로 나타낼 수 있는 숫자의 개수는 2^n입니다. 예를 들어, 8비트는 256개의 값을, 4비트는 16개의 값을, 16비트는 65,536개의 값을 가집니다.
+   - 특정 비트 수로 나타낼 수 있는 숫자의 개수는 2^n입니다. 예를 들어, 8비트는 256개의 값을, 4비트는 16개의 값을, 16비트는 65,536개의 값을 가집니다.
 
 4. 진법 변환:
 
-- 십진수는 기수 10으로, 이진수는 기수 2로 표현됩니다. 자릿수 수에 따라 기수^자릿수로 숫자의 개수를 계산할 수 있습니다. 예를 들어, 두 자리 십진수는 10^2 = 100개의 값을, 두 자리 이진수는 2^2 = 4개의 값을 가집니다.
+   - 십진수는 기수 10으로, 이진수는 기수 2로 표현됩니다. 자릿수 수에 따라 기수^자릿수로 숫자의 개수를 계산할 수 있습니다. 예를 들어, 두 자리 십진수는 10^2 = 100개의 값을, 두 자리 이진수는 2^2 = 4개의 값을 가집니다.
 
 5. 이진수 연산:
 
-- 덧셈: 이진수 덧셈은 4가지 경우만 있어 간단합니다. 예를 들어, 1 + 1은 자리올림이 발생하여 10이 됩니다.
-- 논리 연산자:
-  - OR 연산: 하나라도 참이면 결과가 참입니다 (예: 1 OR 0 = 1).
-  - AND 연산: 둘 다 참일 때만 결과가 참입니다 (예: 1 AND 1 = 1).
+   - 덧셈: 이진수 덧셈은 4가지 경우만 있어 간단합니다. 예를 들어, 1 + 1은 자리올림이 발생하여 10이 됩니다.
+   - 논리 연산자:
+     - OR 연산: 하나라도 참이면 결과가 참입니다 (예: 1 OR 0 = 1).
+     - AND 연산: 둘 다 참일 때만 결과가 참입니다 (예: 1 AND 1 = 1).
 
 6. 서브넷 마스크와 이진 연산:
 
-- 서브넷 마스크는 IP 주소와 AND 연산을 통해 네트워크와 호스트를 구분하는 데 사용됩니다.
-- 예를 들어, IP 주소 9.100.100.100과 서브넷 마스크 255.255.255.0의 이진 AND 연산을 통해
-  네트워크 ID와 서브넷 ID를 추출할 수 있습니다.
+   - 서브넷 마스크는 IP 주소와 AND 연산을 통해 네트워크와 호스트를 구분하는 데 사용됩니다.
+   - 예를 들어, IP 주소 9.100.100.100과 서브넷 마스크 255.255.255.0의 이진 AND 연산을 통해
+     네트워크 ID와 서브넷 ID를 추출할 수 있습니다.
 
 이진 연산과 서브넷 마스크를 이해하는 것은 네트워크의 구조를 이해하고 관리하는 데 중요합니다.
 
@@ -365,27 +365,168 @@ TTL 필드는 데이터그램이 네트워크를 통해 이동할 수 있는 최
 
 1. 주소 클래스의 한계:
 
-- 클래스 A, B, C: 각각 8비트, 16비트, 24비트 네트워크 ID를 사용합니다.
-  - 클래스 C는 최대 254개의 호스트를 지원하지만, 소규모 네트워크에는 적합하고 대규모 네트워크에는 비효율적입니다.
-  - 클래스 B는 65,534개의 호스트를 지원하지만, 너무 많은 호스트를 지원해 불필요한 낭비가 발생합니다.
-- 많은 회사가 클래스 C 네트워크를 여러 개 사용하여 라우팅 테이블이 복잡해졌습니다.
+   - 클래스 A, B, C: 각각 8비트, 16비트, 24비트 네트워크 ID를 사용합니다.
+     - 클래스 C는 최대 254개의 호스트를 지원하지만, 소규모 네트워크에는 적합하고 대규모 네트워크에는 비효율적입니다.
+     - 클래스 B는 65,534개의 호스트를 지원하지만, 너무 많은 호스트를 지원해 불필요한 낭비가 발생합니다.
+   - 많은 회사가 클래스 C 네트워크를 여러 개 사용하여 라우팅 테이블이 복잡해졌습니다.
 
 2. CIDR의 도입:
 
-- CIDR(Classless Inter-Domain Routing)는 주소 클래스 개념을 버리고 네트워크와 호스트 ID를 조합하여 더 유연한 주소 할당을 가능하게 합니다.
-- 슬래시 표기법: IP 주소와 넷 마스크를 결합하여 주소를 정의합니다. 예를 들어, 9.100.100.100/24는 네트워크 ID와 서브넷 ID를 결합하여 사용합니다.
+   - CIDR(Classless Inter-Domain Routing)는 주소 클래스 개념을 버리고 네트워크와 호스트 ID를 조합하여 더 유연한 주소 할당을 가능하게 합니다.
+   - 슬래시 표기법: IP 주소와 넷 마스크를 결합하여 주소를 정의합니다. 예를 들어, 9.100.100.100/24는 네트워크 ID와 서브넷 ID를 결합하여 사용합니다.
 
 3. CIDR의 장점:
 
-- 유연한 네트워크 크기: 고정된 크기의 네트워크 대신, 다양한 크기의 네트워크를 지원합니다.
-- 효율적인 라우팅: 네트워크를 연속 청크로 결합하여 라우터가 단일 항목만 인식하면 되므로 라우팅 테이블이 간소화됩니다.
-- 호스트 수의 조정: /24 네트워크는 256개의 잠재적 호스트 중 254개를 사용하고, /23 네트워크는 512개의 잠재적 호스트 중 510개를 사용합니다.
+   - 유연한 네트워크 크기: 고정된 크기의 네트워크 대신, 다양한 크기의 네트워크를 지원합니다.
+   - 효율적인 라우팅: 네트워크를 연속 청크로 결합하여 라우터가 단일 항목만 인식하면 되므로 라우팅 테이블이 간소화됩니다.
+   - 호스트 수의 조정: /24 네트워크는 256개의 잠재적 호스트 중 254개를 사용하고, /23 네트워크는 512개의 잠재적 호스트 중 510개를 사용합니다.
 
 CIDR는 주소 공간의 낭비를 줄이고, 네트워크 관리를 단순화하며, 라우팅 효율성을 높이는 데 도움을 줍니다.
 
 #### 라우팅
 
-### 전송 및 애믈리케이션 계층
+인터넷의 기본적인 기능 중 하나인 라우팅에 대한 설명입니다. 라우팅은 데이터 패킷이 출발지에서 목적지까지 효율적으로 전달되도록 하는 과정입니다. 라우터는 이 과정을 수행하는 핵심 장비로, 두 개 이상의 네트워크를 연결하여 패킷의 전송을 관리합니다.
+
+1. 라우팅 기본 개념:
+
+   - 라우터: 두 개 이상의 네트워크 인터페이스를 가진 장비로, 패킷을 수신하여 목적지에 맞게 전달합니다.
+   - 라우팅 과정:
+
+     1. 라우터가 데이터 패킷을 수신합니다.
+     2. 패킷의 목적지 IP를 검사합니다.
+     3. 라우팅 테이블을 참조하여 목적지 네트워크를 확인합니다.
+     4. 적절한 네트워크 인터페이스를 통해 패킷을 전달합니다.
+
+2. 기본 예제:
+
+   - 네트워크 A (192.168.1.0/24)에서 네트워크 B (10.0.0.0/24)로 패킷을 전송하는 예제.
+   - 패킷이 네트워크 A의 라우터를 거쳐 네트워크 B의 목적지 IP로 전달됩니다.
+
+3. 복잡한 라우팅:
+
+   - 네트워크 C (172.16.1.0/23)가 추가된 상황에서, 패킷은 네트워크 A -> 네트워크 B -> 네트워크 C를 거쳐 전달됩니다.
+   - 라우터는 각 네트워크에서 다음 목적지로 패킷을 전달하기 위해 라우팅 테이블을 참조합니다.
+
+4. 대규모 인터넷 라우팅:
+
+   - 실제 인터넷에서는 수많은 네트워크와 라우터가 연결되어 있으며, 패킷이 여러 라우터를 거쳐 목적지에 도달합니다.
+   - 패킷은 여러 경로를 통해 전송될 수 있으며, 각 라우터는 패킷의 IP를 검사하고 최적의 경로를 선택하여 전달합니다.
+
+라우팅의 핵심은 패킷을 목적지까지 가장 효율적으로 전달하는 것이며, 이 과정은 지속적으로 반복됩니다.
+
+---
+
+**라우팅 테이블의 기본 구성**
+
+1.  라우팅 테이블의 기본 구성 요소:
+
+    - 대상 네트워크: 라우터가 알고 있는 네트워크 정보.
+    - 넷 마스크: 네트워크 ID와 함께 사용하는 서브넷 마스크.
+    - 다음 홉: 패킷을 다음으로 전달할 라우터의 IP 주소 또는 직접 연결된 네트워크.
+    - 총 홉: 패킷이 최종 목적지까지 도달하는 데 필요한 홉 수.
+
+2.  라우팅 테이블의 작동:
+
+    - 패킷 수신: 라우터가 패킷을 수신하면, 패킷의 대상 IP 주소를 검사합니다.
+    - 경로 확인: 라우터는 라우팅 테이블에서 해당 IP 주소에 적합한 네트워크를 찾습니다.
+    - 전달 결정: 다음 홉을 통해 패킷을 전달하거나, 직접 연결된 네트워크로 패킷을 보냅니다.
+
+3.  라우팅의 복잡성:
+
+    - 다양한 경로: 인터넷 같은 대규모 네트워크에서는 여러 경로가 존재하며, 라우터는 최단 경로를 선택하려고 합니다.
+    - 경로 변화: 중간 라우터의 실패, 링크 문제, 새로운 라우터 도입 등으로 경로가 변경될 수 있습니다.
+
+4.  라우팅 테이블의 크기:
+
+    - 단순에서 복잡으로: 작은 네트워크에서는 간단하지만, 대규모 인터넷에서는 수백만 개의 라우팅 테이블 항목을 가질 수 있습니다.
+
+라우팅 테이블의 정보는 라우터가 패킷을 올바른 경로로 전달하는 데 필수적입니다.
+
+---
+
+1. 라우팅 프로토콜의 역할:
+
+   - 라우터들이 정보를 교환하여 최적의 경로를 학습하고 라우팅 테이블을 업데이트하는 데 사용됩니다.
+
+2. 내부 게이트웨이 프로토콜(IGP):
+
+   - 링크 상태 프로토콜과 거리 벡터 프로토콜로 나뉩니다.
+   - 링크 상태 프로토콜은 각 라우터가 네트워크의 모든 링크 상태 정보를 공유하여 최적의 경로를 계산합니다.
+   - 거리 벡터 프로토콜은 각 라우터가 자신과 직접 연결된 라우터에게만 정보를 공유하며, 인접 라우터의 정보를 바탕으로 경로를 업데이트합니다.
+
+3. 거리 벡터 프로토콜:
+
+   - 작동 방식: 라우터는 자신의 라우팅 테이블을 인접 라우터에게 전송하고, 이를 통해 각 네트워크까지의 홉 수를 계산하여 테이블을 업데이트합니다.
+   - 제한: 라우터는 멀리 떨어진 네트워크에 대한 정보가 부족하여 경로 변화에 빠르게 반응하지 못할 수 있습니다.
+
+4. 링크 상태 프로토콜:
+
+   - 작동 방식: 각 라우터는 자신의 링크 상태를 전체 네트워크에 전파하여 모든 라우터가 네트워크 전체를 알 수 있도록 합니다. 이를 기반으로 복잡한 알고리즘을 사용하여 최적의 경로를 결정합니다.
+   - 장점: 더 많은 정보를 바탕으로 정확한 경로를 계산하고, 라우팅 테이블을 빠르게 업데이트할 수 있습니다.
+   - 단점: 더 많은 메모리와 처리 능력을 필요로 합니다.
+
+5. 기술 발전:
+
+   - 컴퓨터 하드웨어의 발전으로 링크 상태 프로토콜이 주로 사용되며, 거리 벡터 프로토콜은 상대적으로 구식이 되었습니다.
+
+---
+
+1. 외부 게이트웨이 프로토콜의 역할:
+
+   - 자율 시스템(AS) 간에 데이터를 전달하는 데 사용됩니다.
+   - 자율 시스템은 하나의 조직이 관리하는 네트워크 모음입니다.
+   - 외부 게이트웨이 프로토콜은 인터넷의 핵심 구조를 형성합니다.
+
+2. 자율 시스템과 코어 라우터:
+
+   - 인터넷은 수많은 자율 시스템이 연결된 복잡한 네트워크입니다.
+   - 코어 인터넷 라우터는 자율 시스템의 경계 라우터와 상호작용하여 트래픽을 최적의 경로로 전달해야 합니다.
+
+3. IANA의 역할:
+
+   - **IANA(Internet Assigned Numbers Authority)**는 IP 주소와 자율 시스템 번호(ASN)의 할당을 관리하는 비영리 기관입니다.
+   - IP 주소는 네트워크 ID와 호스트 ID로 분할되어 관리됩니다.
+   - ASN은 개별 자율 시스템을 식별하는 32비트 숫자로, IP 주소처럼 분할되지 않고 단일 숫자로 표현됩니다.
+
+4. ASN의 사용:
+
+   - ASN은 IP 주소보다 사용 빈도가 적고 단순한 방식으로 자율 시스템을 식별합니다.
+   - 예를 들어, 특정 ASN이 어떤 회사에 속하는지 알 수 있습니다.
+
+5. 기본 이해의 중요성:
+
+   - 외부 게이트웨이 프로토콜과 자율 시스템 번호의 기본 이해는 인터넷의 핵심 구성 요소를 이해하는 데 중요합니다.
+   - IT 직원이 직접 다루지 않더라도, 이러한 개념은 인터넷의 전반적인 작동 방식을 이해하는 데 도움이 됩니다.
+
+---
+
+**IPv4 주소와 RFC 1918 요약**
+
+1. IPv4 주소의 한계:
+
+   - IPv4 주소는 32비트 숫자로 정의되며, 최대 4,294,967,295개의 고유 IP 주소를 제공할 수 있습니다.
+   - 2017년 기준으로 인구가 약 75억 명인 지구상에서는 이 주소 수가 부족하다는 문제가 발생했습니다.
+   - 대규모 데이터 센터와 기업에 필요한 IP 주소를 충분히 제공하지 못했습니다.
+
+2. RFC 1918의 도입:
+
+   - 1996년에 게시된 RFC 1918은 라우팅할 수 없는 주소 공간을 정의했습니다.
+   - 라우팅할 수 없는 주소 공간은 내부 네트워크에서만 사용되며, 인터넷의 외부와 통신할 수 없습니다.
+   - 이 주소들은 일반적으로 NAT(네트워크 주소 변환) 기술을 사용하여 외부와의 통신을 가능하게 합니다.
+
+3. 라우팅할 수 없는 주소 범위:
+
+   - 10.0.0.0/8: 10.0.0.0부터 10.255.255.255까지의 주소 범위
+   - 172.16.0.0/12: 172.16.0.0부터 172.31.255.255까지의 주소 범위
+   - 192.168.0.0/16: 192.168.0.0부터 192.168.255.255까지의 주소 범위
+   - 이들 주소는 누구나 내부 네트워크에서 자유롭게 사용할 수 있습니다.
+
+4. 적용:
+
+   - 내부 게이트웨이 프로토콜은 이러한 주소 범위를 라우팅합니다.
+   - 외부 게이트웨이 프로토콜은 라우팅할 수 없는 주소를 처리하지 않습니다.
+
+### 전송 및 애플리케이션 계층
 
 ### 네트워킹 서비스
 
