[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -770,6 +770,63 @@ OSI 모델은 5계층 모델에 비해 더 엄격하게 정의되어 있으며, 
 
 #### 이름 변환
 
+1. 컴퓨터와 숫자:
+
+   컴퓨터는 이진수(0과 1)로 데이터를 처리하지만, 인간에게는 이진수를 기억하는 것이 어렵습니다. 예를 들어, IP 주소는 32비트 이진수로 구성되지만, 이를 십진수 형태로 표시하여 기억하기 쉽게 만듭니다. MAC 주소는 48비트 이진수로, 16진수 형태로 표현됩니다.
+
+2. DNS의 필요성:
+
+   사람들은 문자를 더 잘 기억하므로, DNS는 도메인 이름을 IP 주소로 변환하는 시스템입니다. 예를 들어, 웹사이트에 접근할 때 숫자 IP 주소 대신 도메인 이름(예: www.weather.com)을 사용하는 것이 훨씬 더 편리합니다.
+
+3. IP 주소의 변동성:
+
+   웹사이트의 IP 주소는 여러 이유로 변경될 수 있습니다. DNS를 사용하면 도메인 이름과 그에 대응하는 IP 주소를 관리할 수 있으며, 사용자에게는 IP 주소 변경이 투명하게 처리됩니다.
+
+4. 지리적 분산:
+
+   웹사이트의 데이터 센터는 전 세계에 분산되어 있을 수 있습니다. DNS는 사용자의 위치에 따라 가장 가까운 데이터 센터의 IP 주소를 제공함으로써 웹사이트의 응답 속도를 개선합니다.
+
+5. DNS의 중요성:
+
+   DNS는 웹사이트의 접근성을 관리하고, 사용자에게 효율적인 인터넷 경험을 제공합니다. IT 지원 전문가로서 DNS의 작동 원리를 이해하는 것은 네트워킹 문제를 해결하는 데 매우 중요합니다.
+
+---
+
+DNS(도메인 이름 시스템)의 작동 방식과 관련된 주요 개념
+
+1. DNS의 역할:
+
+   DNS는 도메인 이름을 IP 주소로 변환하는 시스템입니다. 이 시스템은 인간이 기억하기 쉬운 도메인 이름을 컴퓨터가 이해할 수 있는 IP 주소로 변환해 줍니다. 이 과정을 ‘이름 변환’이라고 합니다.
+
+2. DNS 서버 유형:
+
+   - 캐싱 네임서버: 일정 시간 동안 도메인 이름 조회 결과를 저장하여 같은 조회가 반복되지 않도록 합니다.
+   - 재귀 네임서버: 전체 DNS 조회를 수행하여 도메인 이름의 IP 주소를 찾아줍니다.
+   - 루트 네임서버: 총 13개가 있으며, TLD(최상위 도메인) 네임서버로 쿼리를 전송합니다.
+   - TLD 네임서버: 도메인 이름의 최상위 부분(.com, .org 등)을 담당합니다.
+   - 권한 네임서버: 특정 도메인 이름의 최종 IP 주소를 제공하는 서버입니다.
+
+3. 캐싱과 TTL:
+
+   DNS 서버는 이전에 조회한 결과를 캐시에 저장합니다. TTL(Time to Live)은 캐시된 항목이 유효한 최대 시간(초)을 나타내며, 이 시간이 지나면 DNS 조회를 다시 수행해야 합니다. TTL이 길면 DNS 레코드의 변경 사항이 반영되는 데 시간이 더 걸립니다.
+
+4. DNS 조회 과정:
+
+   1. 로컬 네임서버가 쿼리를 루트 네임서버에 전송합니다.
+   2. 루트 네임서버가 TLD 네임서버를 찾습니다.
+   3. TLD 네임서버가 권한 네임서버를 찾습니다.
+   4. 권한 네임서버가 최종적으로 도메인 이름의 IP 주소를 제공합니다.
+
+5. 애니캐스트:
+
+   애니캐스트는 데이터 요청을 여러 실제 서버 중 하나로 라우팅하여 전 세계에 분산된 서버를 효과적으로 이용하는 기술입니다.
+
+6. 로컬 캐시:
+
+   로컬 컴퓨터와 네임서버는 임시 DNS 캐시를 유지하여 매번 전체 조회를 수행하지 않고도 IP 주소를 빠르게 확인할 수 있습니다.
+
+이러한 계층적이고 분산된 시스템 덕분에 DNS는 인터넷에서 도메인 이름을 효과적으로 관리하고, 사용자에게 원활한 웹 경험을 제공합니다.
+
 #### 이름 변환 실전
 
 #### Dynamic Host Configuration Protocol (동적 호스트 구성 프로토콜)
