[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -827,6 +827,64 @@ DNS(도메인 이름 시스템)의 작동 방식과 관련된 주요 개념
 
 이러한 계층적이고 분산된 시스템 덕분에 DNS는 인터넷에서 도메인 이름을 효과적으로 관리하고, 사용자에게 원활한 웹 경험을 제공합니다.
 
+---
+
+1. DNS의 기본 개념: DNS는 도메인 이름을 IP 주소로 변환하는 시스템입니다. 이는 사람이 기억하기 쉬운 도메인 이름을 컴퓨터가 이해할 수 있는 IP 주소로 변환하는 과정입니다.
+
+2. DNS 서버의 종류:
+
+   - 캐싱 네임서버: 도메인 이름 조회 결과를 일정 시간 동안 저장하여 재사용합니다.
+   - 재귀 네임서버: 전체 DNS 조회를 수행하여 도메인 이름의 IP 주소를 찾아줍니다.
+   - 루트 네임서버: 13개가 있으며, TLD 네임서버로의 쿼리를 전송합니다.
+   - TLD 네임서버: 도메인 이름의 최상위 부분(.com, .org 등)을 담당합니다.
+   - 권한 네임서버: 도메인 이름의 최종 IP 주소를 제공하는 서버입니다.
+
+3. 캐싱과 TTL:
+
+   - TTL(Time to Live): DNS 캐시의 유효 기간을 설정하며, 이 시간이 지나면 DNS 조회를 다시 수행해야 합니다.
+
+4. DNS 조회 과정:
+
+   1. 로컬 네임서버가 루트 네임서버에 쿼리를 전송합니다.
+   2. 루트 네임서버가 TLD 네임서버로 쿼리를 전달합니다.
+   3. TLD 네임서버가 권한 네임서버로 쿼리를 전달합니다.
+   4. 권한 네임서버가 최종적으로 도메인 이름의 IP 주소를 제공합니다.
+
+5. 애니캐스트: 데이터 요청을 여러 서버로 라우팅하는 기술로, 루트 및 TLD 네임서버는 전 세계에 분산되어 있습니다.
+
+6. 로컬 캐시: 로컬 컴퓨터와 네임서버는 임시 DNS 캐시를 유지하여 IP 주소를 빠르게 확인하고 전체 조회를 반복하지 않도록 합니다.
+
+이러한 시스템은 인터넷의 안정성과 효율성을 보장합니다.
+
+---
+
+DNS(Domain Name System)가 TCP 대신 UDP를 사용하는 이유와 각 프로토콜의 차이점
+
+1. DNS와 프로토콜:
+
+   - DNS는 도메인 이름을 IP 주소로 변환하는 시스템입니다.
+   - DNS는 UDP를 사용하여 주로 비연결형 통신을 통해 빠르게 요청과 응답을 처리합니다.
+
+2. TCP와 UDP의 차이:
+
+   - TCP는 연결 지향 프로토콜로, 연결 설정과 해제가 필요합니다. 이로 인해 패킷 수가 많아지고, 오버헤드가 큽니다.
+   - UDP는 비연결형 프로토콜로, 연결 설정 없이 빠르게 패킷을 전송합니다.
+
+3. DNS 요청 시 TCP vs. UDP:
+
+   - TCP를 사용하는 경우, DNS 요청과 응답에는 44개의 패킷이 필요할 수 있습니다. 이는 연결 설정, 데이터 전송, 응답 및 연결 종료 등에서 발생하는 패킷 때문입니다.
+   - UDP를 사용하는 경우, DNS 요청과 응답에는 8개의 패킷만 필요합니다. UDP는 간단하게 패킷을 전송하고, 오류 발생 시 다시 요청하면 됩니다.
+
+4. 오류 복구:
+
+   - UDP는 오류 복구 기능이 없지만, DNS 리졸버가 응답을 받지 못하면 다시 요청하여 문제를 해결합니다.
+
+5. 복잡한 상황에서의 TCP 사용:
+
+   - 웹이 복잡해지면서 DNS 응답이 UDP 데이터그램에 들어가지 않는 경우, DNS 서버는 "응답이 너무 큼"이라는 메시지를 보낸 후 TCP를 통해 데이터를 전송할 수 있습니다.
+
+이 내용은 DNS가 간단한 요청과 응답에는 UDP를 사용하지만, 응답 데이터가 크거나 복잡할 때는 TCP를 사용할 수 있음을 보여줍니다.
+
 #### 이름 변환 실전
 
 #### Dynamic Host Configuration Protocol (동적 호스트 구성 프로토콜)
