[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -931,26 +931,57 @@ DNS에서 사용되는 다양한 리소스 레코드 유형과 그 용도
 
 1. TLD (최상위 도메인):
 
-   - 예: www.google.com의 경우 .com.
+   - 예: `www.google.com`의 경우 `.com`.
    - 기능: 도메인 이름의 마지막 부분으로, 인터넷에서 도메인의 유형이나 국가를 나타냅니다.
-   - 관리: ICANN(Internet Corporation for Assigned Names and Numbers)에서 관리합니다. TLD의 예로는 .com, .net, .edu, 국가별 TLD인 .de, .cn, 그리고 최근의 배너티 TLD인 .museum, .pizza 등이 있습니다.
+   - 관리: ICANN(Internet Corporation for Assigned Names and Numbers)에서 관리합니다. TLD의 예로는 `.com`, `.net`, `.edu`, 국가별 TLD인 `.de`, `.cn`, 그리고 최근의 배너티 TLD인 `.museum`, `.pizza` 등이 있습니다.
 
 2. 도메인:
 
-   - 예: www.google.com의 경우 google.
+   - 예: `www.google.com`의 경우 google`.
    - 기능: TLD 네임서버에서 권한 네임서버로 컨트롤이 이동하는 위치를 구분하며, 일반적으로 ICANN 외부의 독립된 조직에서 관리합니다. 도메인은 개인이나 회사가 등록하고 선택할 수 있으며, TLD로 끝나야 합니다.
 
 3. 하위 도메인:
 
-   - 예: www.google.com의 경우 www.
+   - 예: `www.google.com`의 경우 `www`.
    - 기능: 등록된 도메인의 하위 구분을 나타내며, 특정 호스트에 할당된 경우 호스트 이름이라고도 합니다. 하위 도메인은 등록기관에 공식 등록되지 않고도 자유롭게 선택하고 할당할 수 있습니다.
 
 정규화된 도메인 이름 (FQDN):
 
-- 전체 도메인 이름을 구성하는 모든 부분을 포함하며, host.sub.sub.subdomain.domain.com과 같은 형태로 매우 긴 수준을 가질 수 있습니다.
+- 전체 도메인 이름을 구성하는 모든 부분을 포함하며, `host.sub.sub.subdomain.domain.com`과 같은 형태로 매우 긴 수준을 가질 수 있습니다.
 - 기술적으로는 최대 127개의 도메인 수준을 지원하며, 각 부분은 최대 63자까지 가능하고 전체 FQDN은 255자까지 제한됩니다.
 
 이러한 구성 요소들은 도메인 이름을 정확하게 정의하고, 인터넷에서의 위치와 관리에 중요한 역할을 합니다.
+
+---
+
+1. 권한 네임서버:
+
+   - 특정 DNS 영역을 담당합니다.
+   - 영역은 계층적이며, 루트 네임서버는 루트 영역을, TLD 네임서버는 TLD 영역을, 권한 네임서버는 더 세부적인 하위 도메인 영역을 관리합니다.
+
+2. DNS 영역:
+
+   - 도메인의 여러 수준을 관리하기 쉽게 분할합니다.
+   - 예를 들어, `largecompany.com` 도메인을 여러 지사에 따라 `la.largecompany.com`, `pa.largecompany.com`, `sh.largecompany.com`으로 나눌 수 있습니다.
+   - 각 영역은 영역 파일을 통해 구성되며, 이 파일에는 SOA (Start of Authority) 레코드와 NS (Name Server) 레코드가 포함됩니다.
+   - SOA 레코드는 영역의 권한과 관련된 네임서버를 선언하며, NS 레코드는 이 영역을 담당하는 다른 네임서버를 나타냅니다.
+
+3. 리소스 레코드:
+
+   - A 레코드: IPv4 주소를 반환합니다.
+   - 쿼드 A 레코드: IPv6 주소를 반환합니다.
+   - CNAME 레코드: 도메인 이름을 다른 도메인으로 리디렉션합니다.
+   - PTR 레코드: IP 주소를 도메인 이름으로 변환합니다 (역방향 조회).
+
+4. 서버의 다중 배치:
+
+   - 중요 서비스의 경우, 여러 물리적 서버를 배치하여 한 서버에서 문제가 발생할 때 다른 서버가 DNS 트래픽을 처리할 수 있도록 합니다.
+
+5. 역방향 조회 영역:
+
+   - IP를 도메인 이름으로 변환하는 데 사용됩니다. 이 영역 파일은 PTR 레코드를 포함합니다.
+
+이러한 구조는 DNS 시스템의 관리와 안정성을 높이는 데 도움을 줍니다.
 
 #### Dynamic Host Configuration Protocol (동적 호스트 구성 프로토콜)
 
