[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1010,6 +1010,27 @@ DNS에서 사용되는 다양한 리소스 레코드 유형과 그 용도
 
 DHCP는 네트워크에서 IP 주소를 효율적으로 관리하고 자동으로 구성하는 데 중요한 역할을 합니다.
 
+---
+
+1. DHCP의 목적:
+
+   - DHCP는 애플리케이션 계층 프로토콜로, 네트워크에서 호스트의 IP 주소 및 네트워크 구성 정보를 자동으로 관리합니다.
+
+2. DHCP 검색 프로세스:
+
+   - 단계 1: 서버 검색: 클라이언트는 DHCP 검색 메시지를 네트워크에 브로드캐스트하여 DHCP 서버를 찾습니다. 이 메시지는 UDP 포트 68에서 전송되고, 대상 IP는 255.255.255.255입니다.
+   - 단계 2: DHCPOFFER: DHCP 서버는 IP 제안을 포함한 DHCPOFFER 메시지를 브로드캐스트로 전송합니다. 이 메시지는 클라이언트의 MAC 주소를 포함하여 클라이언트가 이를 인식하도록 합니다.
+   - 단계 3: DHCPREQUEST: 클라이언트는 제안된 IP를 수락하는 DHCPREQUEST 메시지를 전송합니다. 이 메시지는 여전히 IP 0.0.0.0에서 브로드캐스트됩니다.
+   - 단계 4: DHCPACK: DHCP 서버는 클라이언트의 요청을 확인하는 DHCPACK 메시지를 브로드캐스트로 보냅니다. 클라이언트는 이 메시지를 통해 네트워크 구성을 완료합니다.
+
+3. DHCP 임대:
+
+   - 할당된 IP 주소는 임대 기간을 가지며, 이 기간이 만료되면 클라이언트는 전체 검색 프로세스를 다시 수행해야 합니다. 클라이언트는 네트워크에서 연결이 끊길 경우 DHCP 서버에 임대를 해제할 수도 있습니다.
+
+DHCP는 네트워크 관리의 복잡성을 줄이고, 클라이언트 기기가 네트워크에 원활하게 연결되도록 도와주는 중요한 역할을 합니다.
+
+---
+
 #### Network Address Translation (네트워크 주소 변환)
 
 #### VPN 및 프록시
