[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1033,6 +1033,14 @@ DHCP는 네트워크 관리의 복잡성을 줄이고, 클라이언트 기기가
 
 #### Network Address Translation (네트워크 주소 변환)
 
+NAT(네트워크 주소 변환)는 IP 주소를 다른 IP 주소로 변환하는 기술로, 표준이 아닌 다양한 구현 방식이 존재합니다. NAT의 주요 목적은 보안 강화와 IPv4 주소 공간의 효율적 사용입니다. NAT는 일반적으로 라우터나 방화벽에서 작동하며, 네트워크 간 통신을 관리합니다.
+
+예를 들어, 네트워크 A(10.1.1.0/24)와 네트워크 B(192.168.1.0/24)가 있다고 할 때, 컴퓨터 1(10.1.1.100)이 컴퓨터 2(192.168.1.100)와 통신하려고 할 때 NAT가 작동합니다. 라우터는 아웃바운드 패킷의 소스 IP를 자신의 IP(192.168.1.1)로 변경하여 패킷을 전송합니다. 이렇게 하면 외부에서는 컴퓨터 1의 IP 주소가 숨겨지게 됩니다.
+
+응답이 올 때, 라우터는 다시 원래의 IP 주소로 변환하여 컴퓨터 1로 전달합니다. 이 과정을 통해 NAT는 IP 매스커레이딩을 구현하며, 네트워크의 보안을 강화하고 외부에서 직접 접근할 수 없도록 보호합니다. 이러한 방식은 다수의 컴퓨터를 한 IP로 관리하는 일대다 NAT로도 알려져 있습니다.
+
+---
+
 #### VPN 및 프록시
 
 ### 인터넷에 연결
