[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1049,6 +1049,10 @@ NAT(네트워크 주소 변환)는 단일 IP 주소를 통해 수백, 수천 대
 
 ---
 
+IANA는 1988년부터 IP 주소를 배포해 왔으며, 인터넷의 급속한 확장으로 IPv4 주소가 거의 소진되었습니다. 현재 IANA는 5개 대륙별 인터넷 레지스트리(RIR)에 주소 블록을 할당하고 있습니다. 이 RIR들은 각각 아프리카(AFRINIC), 미국 및 캐리비안(ARIN), 아시아 및 오세아니아(APNIC), 중앙 및 남아메리카(LACNIC), 유럽 및 중동(RIPE)을 담당합니다. 2011년 이후, 여러 RIR에서 주소가 소진되었고, AFRINIC를 제외한 모든 RIR이 이미 대부분의 IP 주소를 소진했습니다.
+
+이러한 상황은 인터넷의 중대한 위기를 초래하고 있으며, 해결책으로 IPv6의 도입이 필요하지만 이 과정은 시간이 걸립니다. 현재 사용 가능한 해결책 중 하나는 NAT(네트워크 주소 변환)와 라우팅할 수 없는 주소 공간을 활용하는 것입니다. 이 주소 공간은 RFC1918에 정의되어 있으며, 인터넷 라우터가 이 공간으로 트래픽을 전달하지 않기 때문에, 내부적으로 여러 네트워크에서 사용될 수 있습니다. NAT를 사용하면 하나의 공용 IP 주소로 수많은 시스템이 인터넷에서 통신할 수 있도록 하여, IPv4 주소의 부족 문제를 완화할 수 있습니다.
+
 #### VPN 및 프록시
 
 ### 인터넷에 연결
