[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1101,6 +1101,40 @@ T1 기술은 원래 서로 다른 통신 회사 간 연결에 사용되었으나
 
 오늘날 T-반송파 기술은 여전히 사용되지만, 중소기업에서는 운영 비용이 더 저렴한 케이블 광대역이나 광섬유 연결이 더 일반적입니다. 또한 ISP 간 통신에서는 광섬유 기술이 구리 기반 기술을 대체하고 있습니다.
 
+---
+
+공중 전화망은 이미 모든 곳에 인프라를 갖추고 있었기 때문에 인터넷 연결에 적합한 옵션이었습니다. 전화 접속 연결은 오랫동안 집에서 인터넷에 연결하는 주요 방법이었으나, 오디오 파동으로 인해 데이터 전송 속도에는 한계가 있었습니다. 사람들의 요구에 따라 전화 회사는 구리 연선이 음성 통화에 필요한 것보다 더 많은 데이터를 전송할 수 있다는 사실을 발견했습니다.
+
+이로 인해 디지털 가입자 회선(DSL) 기술이 등장하게 되었고, 이는 전화선을 통해 기존 전화 접속 기술보다 훨씬 더 많은 데이터를 전송할 수 있습니다. DSL은 일반 음성 통화와 데이터 전송을 동시에 가능하게 하며, DSLAM(디지털 가입자 회선 액세스 멀티플렉서)을 사용하여 연결을 설정합니다. DSL 기술은 장기적인 연결을 제공하며, 가장 일반적인 두 가지 유형은 ADSL과 SDSL입니다.
+
+- ADSL(비대칭 디지털 가입자 회선): 다운로드 속도가 업로드 속도보다 빠르며, 일반 개인 사용자에게 적합합니다.
+
+- SDSL(대칭형 디지털 가입자 회선): 업로드 및 다운로드 속도가 동일하며, 서버를 호스팅하는 기업에서 주로 사용되었습니다.
+
+SDSL은 비용이 저렴해져 개인 사용자에게도 일반적으로 사용되며, 대부분은 T1 회선과 같은 초당 1.544메가비트의 속도를 제공합니다. HDSL(높은 비트 전송률 디지털 가입자 회선) 기술도 발전하여 초당 1.544메가비트를 초과하는 속도를 제공합니다. 특정 DSL 회선에 대한 자세한 정보는 해당 ISP에 문의하는 것이 좋습니다.
+
+---
+
+전화와 컴퓨터 네트워킹의 역사를 살펴보면 모든 통신이 유선 연결에서 시작되었음을 알 수 있습니다. 최근에는 점점 더 많은 트래픽이 무선으로 전환되고 있지만, 텔레비전 방송은 초기에는 무선 송신탑에서 전송되는 방식이었습니다. 1940년대 후반 미국에서 최초의 케이블 TV 기술이 개발되어, 외딴 지역에서도 텔레비전 방송을 제공하게 되었습니다.
+
+1984년 케이블 통신 정책법이 통과되면서 미국의 케이블 TV 사업은 급성장하게 되었고, 1990년대 초에는 케이블 TV 인프라가 공중 전화 시스템과 유사한 규모에 이르렀습니다. 이후 케이블 회사들은 DSL과 유사하게 케이블을 통해 고속 인터넷 액세스를 제공할 수 있는 가능성을 인식하게 되었습니다.
+
+케이블 기반 인터넷 액세스는 기존의 동축 케이블을 사용하여 TV 방송과 간섭하지 않는 주파수를 통해 데이터를 전송하며, 이 기술을 케이블 광대역이라고 부릅니다. 하지만 케이블 인터넷은 일반적으로 공유 대역폭 모델을 사용하여 여러 사용자가 대역폭을 공유하므로, 사용량이 많을 때 인터넷 속도가 느려질 수 있습니다. 케이블 인터넷 연결은 보통 케이블 모뎀으로 관리되며, 이는 소비자 네트워크와 ISP의 코어 네트워크를 연결하는 CMTS에 연결됩니다.
+
+---
+
+광섬유는 인터넷 연결에 오랫동안 사용되어 왔으며, 빛을 이용한 데이터 전송으로 속도가 빠르고 신호 저하 없이 더 멀리 전송할 수 있습니다. 구리 케이블에 비해 전기 신호가 이동할 수 있는 최대 거리보다 훨씬 더 먼 거리를 이동할 수 있지만, 광섬유의 생산과 설치 비용이 높아 오랫동안 ISP는 코어 네트워크나 데이터 센터에서만 사용했습니다. 최근에는 광섬유를 최종 사용자에게 더 가깝게 전달하는 방식이 인기를 끌면서 FTTX(Fiber to the X) 개념이 개발되었습니다.
+
+FTTX는 다양한 구현 방식이 있으며, 다음과 같은 몇 가지 버전이 있습니다:
+
+1. FTTN (Fiber to the Neighborhood): 광섬유 기술이 특정 주민을 위한 단일 물리적 캐비닛까지 데이터를 전달하고, 그 이후에는 구리 연선이나 동축 케이블을 사용합니다.
+
+2. FTTB (Fiber to the Building): 개별 건물까지 광섬유가 연결되고, 건물 내부에서는 일반적으로 구리 연선이 사용됩니다.
+
+3. FTTH (Fiber to the Home): 인근의 개별 거주지나 아파트 건물까지 광섬유가 연결됩니다. FTTH와 FTTB는 FTTP(Fiber to the Premises)로 통칭되기도 합니다.
+
+광섬유 기술의 경계 지점은 광 네트워크 단말장치(ONT)로, 이는 광섬유 네트워크가 이해하는 프로토콜의 데이터를 구리 연선 네트워크가 이해할 수 있는 프로토콜로 변환하는 역할을 합니다.
+
 #### WAN
 
 #### 무선 네트워킹
