[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1189,4 +1189,16 @@ WAN 기술의 대안으로 많이 사용되는 기술은 지점 간 VPN입니다
 
 결론적으로, 충돌 도메인 문제는 무선 네트워킹에서 필연적으로 발생할 수 있지만, 채널을 잘 활용하고 관리함으로써 무선 네트워크의 성능을 최적화할 수 있습니다.
 
+---
+
+무선 네트워킹의 보안 문제: 유선 네트워크와 달리 무선 네트워크는 공중으로 전파되므로, 범위 내에서 누구든지 전송을 가로챌 수 있습니다.
+
+WEP (Wired Equivalent Privacy): WEP는 초기 무선 네트워크 보안을 위한 암호화 기술로, 40비트 암호화 키를 사용합니다. 하지만 약한 보안으로 인해 쉽게 해독되며, 충분한 보호를 제공하지 못합니다.
+
+WPA 및 WPA2: WEP의 한계를 극복하기 위해 **WPA(Wi-Fi Protected Access)**가 도입되었으며, 128비트 키를 사용해 보안이 강화되었습니다. WPA2는 WPA의 개선된 버전으로, 256비트 키를 사용해 훨씬 더 강력한 보안을 제공합니다.
+
+MAC 필터링: MAC 필터링을 사용하면 특정 기기(MAC 주소)만 네트워크에 연결할 수 있게 하여, 권한 없는 기기의 접근을 차단하는 추가적인 보안 장벽을 제공합니다. 그러나 암호화 수준을 향상시키지는 않습니다.
+
+결론적으로, 무선 네트워크 보안을 강화하기 위해 WEP에서 WPA 및 WPA2로 발전했으며, MAC 필터링은 추가적인 보호 수단으로 사용됩니다.
+
 ## 문제 해결 및 네트워킹의 미래
