[08.강의] 내용 추가

--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1203,4 +1203,16 @@ MAC 필터링: MAC 필터링을 사용하면 특정 기기(MAC 주소)만 네트
 
 ---
 
+1. 셀룰러 네트워킹 정의: 셀룰러 네트워크는 모바일 네트워킹이라고도 하며, 전 세계적으로 보편적으로 사용되는 무선 네트워크입니다. 일부 지역에서는 가장 일반적인 인터넷 연결 방법이기도 합니다.
+
+2. 802.11 네트워크와의 유사점: 셀룰러 네트워킹은 Wi-Fi(802.11 네트워크)와 유사하게 무선 전파를 통해 작동하며, 특정 주파수 대역을 사용합니다. 셀룰러 네트워크도 다양한 사양이 존재합니다.
+
+3. 차이점: 셀룰러 네트워크는 Wi-Fi보다 더 넓은 범위에서 작동하며, 수 킬로미터 또는 수 마일 이상 떨어진 거리에 전송할 수 있습니다.
+
+4. 셀 개념: 셀룰러 네트워크는 셀을 기반으로 작동합니다. 각 셀은 특정 주파수 대역을 할당받으며, 인접한 셀은 겹치지 않는 주파수를 사용합니다. 이는 Wi-Fi의 여러 액세스 포인트가 있는 설정과 유사합니다.
+
+5. 셀 타워의 역할: 셀 타워는 액세스 포인트와 유사한 역할을 하며, 훨씬 더 넓은 범위에서 데이터를 송수신합니다.
+
+6. 보편화된 기기: 스마트폰뿐만 아니라 태블릿, 노트북, 심지어 고급 자동차에도 셀룰러 네트워크가 사용되고 있으며, 셀룰러 액세스는 점점 더 보편화되고 있습니다.
+
 ## 문제 해결 및 네트워킹의 미래
